--- a/epub_source/OEBPS/Text/index_split_001.html
+++ b/epub_source/OEBPS/Text/index_split_001.html
@@ -10,13 +10,13 @@
  
 </head>
   <body class="mp_body">
-<h1 class="mp_title" u00024commentu0005bu00027idu00027u0005d="" id="calibre_toc_2">練拳須知</h1>
-<p class="mp_main">夫人生之最幸福者體格精神之健康也，而金玉權勢之不與焉。何以言之，人生身之不健康，其苦痛而不可勝言者也，雖有權勢富貴，亦不能勝用矣。由斯觀之，身體健康實人之最重者也。然而，人體之強壯非墜生之後即可永久保持其強也，若保持其強必有他方使之致也。但能使其強身者，良方眾矣。今文明進步科學發達，西洋交通之便利，其種類之繁多不可勝計矣。雖然如是之多，而其對於人之功效，蓋有偏於—方者，有益於四肢者或不健於腦，有益心氣者或不健於四肢。非其無益於人，是其每種有益而不能遍於周身也。夫其有益能遍於全體發展，健壯體格活潑精神，惟學拳是為其良方矣。故雲拳術者，吾中華之國粹也。</p>
-<p class="mp_main">溯拳雖甚益，其益在身矣，論其害亦不可勝算也。因功及害致有吐血殞命，體態奇形百出者，或互相嫉忌，殺身亡命，此皆當然之理也。其害既及人如是，而人之獨稱為吾國之粹者，其故何也?此無他，知與不知也。故古人雲：知用善用者逢凶化吉，不知而濫用者遇吉成殃，善哉是言也。故練拳須知實吾人不可絲毫忽略之言也。</p>
-<p class="mp_main">拳也者種類不一，細微精妙，深遠博奧，望之而無津涯，究之而無底蘊，而我之所知者為何也，曰知師禮藝者是也。人之練拳也，既知拳真練之則可知明師又何為哉。夫練拳之人，尤茫茫之大海中之孤舟乘者，雖盡力搖櫓，奈朦於雲霧一望無際而不辨彼岸；雖力竭喘死，而亦不能抵岸，是故必有善船術者以導之，雖褲微力轉瞬間亦可至也。習拳者亦然也，如不知明師，雖盡力以練之，因無明師之善誘，其成功亦難希能冀也，宜知明師者此其一也。人當練拳之初，因不知拳之性態，是故練者只知出力而不知所當，然一節稍誤則身心因之而受巨創。又練拳之著則在姿勢，如姿勢不順，即使盡心力練之，而拳力亦難以因之而增長乎，故必須有明師而善效之，始能入勁矣，此宜知明師者其二也。而拳術所貴者，在其對於吾人之益甚大，而其最重者乃其武德也。有拳藝極高者因而恃藝淩人，而人莫能禦之，是故國人受其害，偶遇強敵，則因之而身敗名裂，此不知武德之故也。武德之能知者，則必依明師時時善誘之，以正軌行之正路之，由明師而知其真諦，如活命救災見義勇為，此必由明師之可知能實施之於外者也，此宜知明師者之三也。今有三點宜知明師之理，歹夫愚婦無所疑也。藝之精也，固在人之用功，然必知其練法及與人體各部之生理後，始能得進步之捷徑。</p>
-<p class="mp_main">練拳之法，不外上、中、下三部，亦即上、中、下三盤也。</p>
-<p class="mp_main">頭與上肢之部謂之上，腰與胸之間渭之中，而下盤者即俗謂地盤，因其各部之不同，則練之勁路亦因而各異。上盤則以貼身靠打刁拿鎖帶等力為主，中盤則以欷懈柔化粘黏連隨之力為主，而地盤則必有以鉤掛踩蹁踢蹬撥縮之力。苟不知此，則拳之力難以上身而具神威。此拳之練法之不可不知者也。此外人雖百骸，可謂三節九段也，練習之時則必以三節九段為一體，始能全身化而為一整體之力，拳藝乃因之而精。然無步法則拳藝仍難成，因無步法猶如人之無足也，為是藝雖通則與人戰亦不能勝，此步法之不可不知也。至於氣之運用，則練藝知之最重者也。教之師乃吾輩模範也，有過而改之，有錯而勸之，導之以正軌，行之以正路，虔心領教其益非淺。而方能成德高藝精之能者，皆由良師長輩之善教而所得厚益也。</p>
-<p class="mp_main">宜敬師愛長，敬師即敬業也，此亦練拳須知之最重要者也。常舀之，藝不在多貴在精，雖有千藝不如真傳一點，練百招不如快為先，皆練拳之須知者也。</p>
+<h1 class="mp_title" u00024commentu0005bu00027idu00027u0005d="" id="calibre_toc_2">练拳须知</h1>
+<p class="mp_main">夫人生之最幸福者体格精神之健康也，而金玉权势之不与焉。何以言之，人生身之不健康，其苦痛而不可胜言者也，虽有权势富贵，亦不能胜用矣。由斯观之，身体健康实人之最重者也。然而，人体之强壮非坠生之后即可永久保持其强也，若保持其强必有他方使之致也。但能使其强身者，良方众矣。今文明进步科学发达，西洋交通之便利，其种类之繁多不可胜计矣。虽然如是之多，而其对于人之功效，盖有偏于—方者，有益于四肢者或不健于脑，有益心气者或不健于四肢。非其无益于人，是其每种有益而不能遍于周身也。夫其有益能遍于全体发展，健壮体格活泼精神，惟学拳是为其良方矣。故云拳术者，吾中华之国粹也。</p>
+<p class="mp_main">溯拳虽甚益，其益在身矣，论其害亦不可胜算也。因功及害致有吐血殒命，体态奇形百出者，或互相嫉忌，杀身亡命，此皆当然之理也。其害既及人如是，而人之独称为吾国之粹者，其故何也?此无他，知与不知也。故古人云：知用善用者逢凶化吉，不知而滥用者遇吉成殃，善哉是言也。故练拳须知实吾人不可丝毫忽略之言也。</p>
+<p class="mp_main">拳也者种类不一，细微精妙，深远博奥，望之而无津涯，究之而无底蕴，而我之所知者为何也，曰知师礼艺者是也。人之练拳也，既知拳真练之则可知明师又何为哉。夫练拳之人，尤茫茫之大海中之孤舟乘者，虽尽力摇橹，奈朦于云雾一望无际而不辨彼岸；虽力竭喘死，而亦不能抵岸，是故必有善船术者以导之，虽裤微力转瞬间亦可至也。习拳者亦然也，如不知明师，虽尽力以练之，因无明师之善诱，其成功亦难希能冀也，宜知明师者此其一也。人当练拳之初，因不知拳之性态，是故练者只知出力而不知所当，然一节稍误则身心因之而受巨创。又练拳之著则在姿势，如姿势不顺，即使尽心力练之，而拳力亦难以因之而增长乎，故必须有明师而善效之，始能入劲矣，此宜知明师者其二也。而拳术所贵者，在其对于吾人之益甚大，而其最重者乃其武德也。有拳艺极高者因而恃艺凌人，而人莫能御之，是故国人受其害，偶遇强敌，则因之而身败名裂，此不知武德之故也。武德之能知者，则必依明师时时善诱之，以正轨行之正路之，由明师而知其真谛，如活命救灾见义勇为，此必由明师之可知能实施之于外者也，此宜知明师者之三也。今有三点宜知明师之理，歹夫愚妇无所疑也。艺之精也，固在人之用功，然必知其练法及与人体各部之生理后，始能得进步之捷径。</p>
+<p class="mp_main">练拳之法，不外上、中、下三部，亦即上、中、下三盘也。</p>
+<p class="mp_main">头与上肢之部谓之上，腰与胸之间渭之中，而下盘者即俗谓地盘，因其各部之不同，则练之劲路亦因而各异。上盘则以贴身靠打刁拿锁带等力为主，中盘则以欷懈柔化粘黏连随之力为主，而地盘则必有以钩挂踩蹁踢蹬拨缩之力。苟不知此，则拳之力难以上身而具神威。此拳之练法之不可不知者也。此外人虽百骸，可谓三节九段也，练习之时则必以三节九段为一体，始能全身化而为一整体之力，拳艺乃因之而精。然无步法则拳艺仍难成，因无步法犹如人之无足也，为是艺虽通则与人战亦不能胜，此步法之不可不知也。至于气之运用，则练艺知之最重者也。教之师乃吾辈模范也，有过而改之，有错而劝之，导之以正轨，行之以正路，虔心领教其益非浅。而方能成德高艺精之能者，皆由良师长辈之善教而所得厚益也。</p>
+<p class="mp_main">宜敬师爱长，敬师即敬业也，此亦练拳须知之最重要者也。常舀之，艺不在多贵在精，虽有千艺不如真传一点，练百招不如快为先，皆练拳之须知者也。</p>
 <p id="calibre_pb_1" class="mp_end"></p>
 </body>
 </html>
