--- a/epub_source/OEBPS/Text/index_split_005.html
+++ b/epub_source/OEBPS/Text/index_split_005.html
@@ -10,10 +10,10 @@
  
 </head>
   <body class="mp_body">
-<h1 class="mp_title" u00024commentu0005bu00027idu00027u0005d="" id="calibre_toc_6">中氣論</h1>
-<p class="mp_main">中氣者，即仙經所謂元陽、醫家所謂元氣也。以其居人身之正中，故武備名曰中氣。此氣即先天真乙之元氣。仙煉之則為內丹，武練之則為外丹，然內丹未有不借外丹而成者也。蓋動靜互根溫養有法，自有結胎還原之妙，俗學不諳中氣根源，惟務手舞足蹈欲入元竅必不能也。人自有生以來，秉先天之氣，養神以化氣，積氣以化精。當父母構精初凝於虛危穴中，虛危穴前對臍後對腎，非上非下，非左非右，不前不後，不偏不倚，正居一身之正當中，稱為天根，號曰命門，即易所謂太極是也。真陰真陽俱藏此中，神明賴之，呼吸依之。﹁ 此氣靈明發為五臟之神，肺之魄，脾之意，腎之精與志，賴此主持，吸采天地之靈氣，呼出臟腑之濁氣，呼自命門而腎而肝而心而肺，吸自肺而心而脾而肝而腎而命門。﹂ 十二經十五絡之流通系焉。經絡者氣血之道路也。人一呼氣血行三寸。一吸亦行三寸，呼吸定息共行六寸，人一日一夜凡一萬三千五百息，晝夜八百一十丈，凡行陰陽各二十五度，共晝夜凡五十遍周於一身。自經絡而達於臟腑，自臟腑而歸之於經絡矣，從此生腎而生骨。腎屬水臟，水能生木，肝屬木臟而主筋，筋附於骨乃生肝而長筋；木能生火，心屬火臟而生血脈，乃生心而主血脈；火能生土，脾屬土臟而主肌肉，乃生脾而長肌肉；土能生金，肺屬金臟而主皮毛，乃生肺而長皮毛，五臟以次而長，六腑以次而生，是形之成也。因真乙之氣妙合而凝氣之聚也，由百骸之臭充實而實，一而二，二而一，原不可須臾離也。武備知此，練形以合外，練氣以實內，內外合一，堅硬如鐵，自成金剛不壞之體，則超凡入聖上乘可登，若雲制敵猶其小焉者也。</p>
+<h1 class="mp_title" u00024commentu0005bu00027idu00027u0005d="" id="calibre_toc_6">中气论</h1>
+<p class="mp_main">中气者，即仙经所谓元阳、医家所谓元气也。以其居人身之正中，故武备名曰中气。此气即先天真乙之元气。仙炼之则为内丹，武练之则为外丹，然内丹未有不借外丹而成者也。盖动静互根温养有法，自有结胎还原之妙，俗学不谙中气根源，惟务手舞足蹈欲入元窍必不能也。人自有生以来，秉先天之气，养神以化气，积气以化精。当父母构精初凝于虚危穴中，虚危穴前对脐后对肾，非上非下，非左非右，不前不后，不偏不倚，正居一身之正当中，称为天根，号曰命门，即易所谓太极是也。真阴真阳俱藏此中，神明赖之，呼吸依之。﹁ 此气灵明发为五脏之神，肺之魄，脾之意，肾之精与志，赖此主持，吸采天地之灵气，呼出脏腑之浊气，呼自命门而肾而肝而心而肺，吸自肺而心而脾而肝而肾而命门。﹂ 十二经十五络之流通系焉。经络者气血之道路也。人一呼气血行三寸。一吸亦行三寸，呼吸定息共行六寸，人一日一夜凡一万三千五百息，昼夜八百一十丈，凡行阴阳各二十五度，共昼夜凡五十遍周于一身。自经络而达于脏腑，自脏腑而归之于经络矣，从此生肾而生骨。肾属水脏，水能生木，肝属木脏而主筋，筋附于骨乃生肝而长筋；木能生火，心属火脏而生血脉，乃生心而主血脉；火能生土，脾属土脏而主肌肉，乃生脾而长肌肉；土能生金，肺属金脏而主皮毛，乃生肺而长皮毛，五脏以次而长，六腑以次而生，是形之成也。因真乙之气妙合而凝气之聚也，由百骸之臭充实而实，一而二，二而一，原不可须臾离也。武备知此，练形以合外，练气以实内，内外合一，坚硬如铁，自成金刚不坏之体，则超凡入圣上乘可登，若云制敌犹其小焉者也。</p>
 <p class="mp_separator"></p>
-<p class="mp_comment">︻評注：梅花樁武功鍛煉的目的是培養內丹，追求真形，這才是人身的真正解脫、到達彼岸。梅花樁武功以武治心，聚氣是關鍵。聚氣要求無思無為，無思無為時內氣又自然匯聚丹田。無思無為、寂然不動可生靈感，內丹之成需要靈感，因而﹁ 未有不借外丹而成者﹂ 。﹁ 動靜﹂ 乃拳法之基本要素，故﹁ 動靜互根，溫養有法﹂ 即梅花樁練形、練氣、練神的身心並練方法，它能使形氣合一和神氣合一而達內外一體，所以有﹁ 結胎還原之妙﹂ ，所謂﹁ 結胎﹂ 即內丹養成，中氣常團聚中宮。所謂﹁ 還原﹂ 即還歸﹁ 本來面目﹂ ，動則無阻無礙、無牽無掛，流暢自然，有徹底靈之真形。中氣之奧妙無窮，但它的啟動則在於神，而不在於意。神啟動者不假不借，有自然之妙。而以意啟動者常牽強附會，矯揉造作。中氣雖為人人所具有，但不練則不能聚，運轉不利亦不靈明。本文最後指出，梅花樁練功的目的是﹁ 超凡入聖﹂ 攀登上乘，至於技擊制敵，治病救人等皆自然而得矣。︼</p>
+<p class="mp_comment">︻评注：梅花桩武功锻炼的目的是培养内丹，追求真形，这才是人身的真正解脱、到达彼岸。梅花桩武功以武治心，聚气是关键。聚气要求无思无为，无思无为时内气又自然汇聚丹田。无思无为、寂然不动可生灵感，内丹之成需要灵感，因而﹁ 未有不借外丹而成者﹂ 。﹁ 动静﹂ 乃拳法之基本要素，故﹁ 动静互根，温养有法﹂ 即梅花桩练形、练气、练神的身心并练方法，它能使形气合一和神气合一而达内外一体，所以有﹁ 结胎还原之妙﹂ ，所谓﹁ 结胎﹂ 即内丹养成，中气常团聚中宫。所谓﹁ 还原﹂ 即还归﹁ 本来面目﹂ ，动则无阻无碍、无牵无挂，流畅自然，有彻底灵之真形。中气之奥妙无穷，但它的启动则在于神，而不在于意。神启动者不假不借，有自然之妙。而以意启动者常牵强附会，矫揉造作。中气虽为人人所具有，但不练则不能聚，运转不利亦不灵明。本文最后指出，梅花桩练功的目的是﹁ 超凡入圣﹂ 攀登上乘，至于技击制敌，治病救人等皆自然而得矣。︼</p>
 <p id="calibre_pb_5" class="mp_end"></p>
 </body>
 </html>
