--- a/epub_source/OEBPS/Text/index_split_006.html
+++ b/epub_source/OEBPS/Text/index_split_006.html
@@ -10,44 +10,44 @@
  
 </head>
   <body class="mp_body">
-<h1 class="mp_title" u00024commentu0005bu00027idu00027u0005d="" id="calibre_toc_7">陰陽入扶論</h1>
-<p class="mp_main">練形不外陰陽，陰陽不明從何練起。仙經之督脈，行於背之當中，統領諸陽經。任脈行於腹之當中，統領諸陰經。故背為陽腹為陰，二經下交會陰，上會齦交。一南一北，如子午相對，又如坎卦居北之正中，離卦居南之正中，一定不易也。俯勢為陰勢，卻是入陽氣，益督脈，領諸陽經之氣，盡歸於上之前也。仰勢為陽勢，卻是入陰氣，益任脈，領諸陰經之氣，盡歸於上之後也。</p>
+<h1 class="mp_title" u00024commentu0005bu00027idu00027u0005d="" id="calibre_toc_7">阴阳入扶论</h1>
+<p class="mp_main">练形不外阴阳，阴阳不明从何练起。仙经之督脉，行于背之当中，统领诸阳经。任脉行于腹之当中，统领诸阴经。故背为阳腹为阴，二经下交会阴，上会龈交。一南一北，如子午相对，又如坎卦居北之正中，离卦居南之正中，一定不易也。俯势为阴势，却是入阳气，益督脉，领诸阳经之气，尽归于上之前也。仰势为阳势，却是入阴气，益任脉，领诸阴经之气，尽归于上之后也。</p>
 
 
-	<h2 id="calibre_toc_8" class="mp_subtitle">陽入陰附，陰入陽附說</h2>
-<p class="mp_main">以背為陽，太俯而曲，則督脈交任，過陽入陰，陽與陰附合也。腹為陰太仰而彎，則任脈交督，過陰入陽，陰與陽附合也。陰催陽，陽催陰，循環無端，凡筋鬥旋轉勢用之。</p>
+	<h2 id="calibre_toc_8" class="mp_subtitle">阳入阴附，阴入阳附说</h2>
+<p class="mp_main">以背为阳，太俯而曲，则督脉交任，过阳入阴，阳与阴附合也。腹为阴太仰而弯，则任脉交督，过阴入阳，阴与阳附合也。阴催阳，阳催阴，循环无端，凡筋斗旋转势用之。</p>
 
 
-	<h2 id="calibre_toc_9" class="mp_subtitle">入陽扶陰，入陰扶陽說</h2>
-<p class="mp_main">以俯勢入陽氣，不將陰氣扶起，則偏於陽，必有領拉前栽之患。仰勢入陰氣，不將陽氣扶起，則偏於陰，必有掀推後倒之憂，故俯勢出者，落點疾還之以俯熟使無偏於陰也。陰來陽逆，陽來陰逆，不偏不倚，無過不及，落點還原，所雲停成即是此法。推而至於屈者還之以伸，伸者還之以屈，高者還之以低，低者還之以高，側者還之以正，正者還之以側，以及斜歪紐縹，旋轉往來無不皆然。逐勢練去，則陰陽交結自有得心應手之妙，永無失著矣。</p>
+	<h2 id="calibre_toc_9" class="mp_subtitle">入阳扶阴，入阴扶阳说</h2>
+<p class="mp_main">以俯势入阳气，不将阴气扶起，则偏于阳，必有领拉前栽之患。仰势入阴气，不将阳气扶起，则偏于阴，必有掀推后倒之忧，故俯势出者，落点疾还之以俯熟使无偏于阴也。阴来阳逆，阳来阴逆，不偏不倚，无过不及，落点还原，所云停成即是此法。推而至于屈者还之以伸，伸者还之以屈，高者还之以低，低者还之以高，侧者还之以正，正者还之以侧，以及斜歪纽缥，旋转往来无不皆然。逐势练去，则阴阳交结自有得心应手之妙，永无失著矣。</p>
 
 
-	<h2 id="calibre_toc_10" class="mp_subtitle">陰陽並入，陰陽並扶說</h2>
-<p class="mp_main">此仄歪勢也。仄勢陰陽各居其中，故左側勢者，右邊之陰陽並入，以左邊之陰陽並扶之。右側勢者，左邊之陰陽並入，以右邊之陰陽並扶之。</p>
+	<h2 id="calibre_toc_10" class="mp_subtitle">阴阳并入，阴阳并扶说</h2>
+<p class="mp_main">此仄歪势也。仄势阴阳各居其中，故左侧势者，右边之阴阳并入，以左边之阴阳并扶之。右侧势者，左边之阴阳并入，以右边之阴阳并扶之。</p>
 
 
-	<h2 id="calibre_toc_11" class="mp_subtitle">陰陽分入，陰陽分扶說</h2>
-<p class="mp_main">此手膊開合勢也。開胸合背者，陰氣分入陽分，開背合胸者，陽氣分入陰分，﹁ 勢分兩邊﹂ ，故氣亦從中劈開分入而分疾之。</p>
+	<h2 id="calibre_toc_11" class="mp_subtitle">阴阳分入，阴阳分扶说</h2>
+<p class="mp_main">此手膊开合势也。开胸合背者，阴气分入阳分，开背合胸者，阳气分入阴分，﹁ 势分两边﹂ ，故气亦从中劈开分入而分疾之。</p>
 
 
-	<h2 id="calibre_toc_12" class="mp_subtitle">陰陽旋入旋扶說</h2>
-<p class="mp_main">此平輪紐縹勢，搖晃勢也。勢旋轉而不停，氣亦隨之旋繞而不息，陰入陽分，陽入陰分，接續連綿並無休歇，左旋右旋，陰陽旋相為宮也。</p>
+	<h2 id="calibre_toc_12" class="mp_subtitle">阴阳旋入旋扶说</h2>
+<p class="mp_main">此平轮纽缥势，摇晃势也。势旋转而不停，气亦随之旋绕而不息，阴入阳分，阳入阴分，接续连绵并无休歇，左旋右旋，阴阳旋相为宫也。</p>
 
 
-	<h2 id="calibre_toc_13" class="mp_subtitle">陰陽各相扶說</h2>
-<p class="mp_main">此直起直落、不偏不倚勢也。直身正勢，陽氣不得入陰分，陰氣不得入陽分，各歸本位，上至百會穴而交，下至湧泉穴而聚，陰陽入扶，只在兩頭也。</p>
+	<h2 id="calibre_toc_13" class="mp_subtitle">阴阳各相扶说</h2>
+<p class="mp_main">此直起直落、不偏不倚势也。直身正势，阳气不得入阴分，阴气不得入阳分，各归本位，上至百会穴而交，下至涌泉穴而聚，阴阳入扶，只在两头也。</p>
 
 
-	<h2 id="calibre_toc_14" class="mp_subtitle">陰陽斜偏十字入扶說</h2>
-<p class="mp_main">此斜偏側身俯仰勢也。左斜俯勢，陽氣自脊右下提於脊左上，斜入左前陰分；右斜俯勢，陽氣自脊左下提於脊右上，斜入右前陰分。斜劈斜邀手用此。左斜仰勢，陰氣自腹右下提於腹左上，斜入左後陽分；右斜仰勢，陰氣自腹左下提於腹右上，斜入右後陽分。斜攉斜提手用此。</p>
+	<h2 id="calibre_toc_14" class="mp_subtitle">阴阳斜偏十字入扶说</h2>
+<p class="mp_main">此斜偏侧身俯仰势也。左斜俯势，阳气自脊右下提于脊左上，斜入左前阴分；右斜俯势，阳气自脊左下提于脊右上，斜入右前阴分。斜劈斜邀手用此。左斜仰势，阴气自腹右下提于腹左上，斜入左后阳分；右斜仰势，阴气自腹左下提于腹右上，斜入右后阳分。斜攉斜提手用此。</p>
 
 
-	<h2 id="calibre_toc_15" class="mp_subtitle">陰陽亂點入扶說</h2>
-<p class="mp_main">此醉形勢也。醉行者忽前忽後、忽仰忽俯、忽進忽退、忽斜忽正，勢無定形，氣亦隨之亂為入扶也。但亂之中隨勢而布，陰陽不相悖謬，亂而卻不可亂也。</p>
-<p class="mp_main">以上總論一身之大陰陽，其入扶如此。至於手背為陽，膊外為陽，三陽經行於手膊之外也。﹁ 手太陽經起於手小指背，手少陽經起於無名指背，手陽明經起於食指之背，皆上行循膊外而走也。﹂ 手心為陰，膊內為陰，三陰經行於手膊之內也。﹁ 手太陰經止於大指內側，手厥陰經止於中指內面，手少陰經止於小指內面，皆行膊內止於指也。﹂ 足背為陽，腿外為陽，三陽經行於足腿之外也，﹁ 足太陽經止於足小指內之次指背，足少陽經止於足大指內之次指背，足陽明經止於足大指內之次指背，三經皆循腿外而止於指背。﹂ 足心為陰，腿內為陰，三陰經行於足腿之內也。﹁ 足太陰經起於足大指內側下，足厥陰經起於足大指內側上，足少陰經起於足小指過足心湧泉穴，三經皆循腿內也。﹂ 其手足尖之伸翹顛踏，膝胯之屈伸提落，雖用法無窮，而陰陽入扶自有一定，形合則氣不牽扯，形不合則氣必濡滯，逐處體驗無遺纖細為妙。</p>
-<p class="mp_main">以上陰陽入扶各論，斜正仰俯左右旋轉諸說，此即形氣合一，一身之勢法也。所謂渾元一氣是也，此即五勢梅花樁行功之勢法也。前進後退，左旋右轉，一身之法俱以五勢為主。五勢者，大勢、順勢、拗勢、小勢、敗勢是也。正勢大勢也，直出者順勢也，十字勢為拗勢也。曲丁腿勢為小勢，斜側勢為敗勢也。此即五勢梅花拳是也，又為五勢梅花樁，在樁上為梅花樁，在地上為落地梅花也。</p>
+	<h2 id="calibre_toc_15" class="mp_subtitle">阴阳乱点入扶说</h2>
+<p class="mp_main">此醉形势也。醉行者忽前忽后、忽仰忽俯、忽进忽退、忽斜忽正，势无定形，气亦随之乱为入扶也。但乱之中随势而布，阴阳不相悖谬，乱而却不可乱也。</p>
+<p class="mp_main">以上总论一身之大阴阳，其入扶如此。至于手背为阳，膊外为阳，三阳经行于手膊之外也。﹁ 手太阳经起于手小指背，手少阳经起于无名指背，手阳明经起于食指之背，皆上行循膊外而走也。﹂ 手心为阴，膊内为阴，三阴经行于手膊之内也。﹁ 手太阴经止于大指内侧，手厥阴经止于中指内面，手少阴经止于小指内面，皆行膊内止于指也。﹂ 足背为阳，腿外为阳，三阳经行于足腿之外也，﹁ 足太阳经止于足小指内之次指背，足少阳经止于足大指内之次指背，足阳明经止于足大指内之次指背，三经皆循腿外而止于指背。﹂ 足心为阴，腿内为阴，三阴经行于足腿之内也。﹁ 足太阴经起于足大指内侧下，足厥阴经起于足大指内侧上，足少阴经起于足小指过足心涌泉穴，三经皆循腿内也。﹂ 其手足尖之伸翘颠踏，膝胯之屈伸提落，虽用法无穷，而阴阳入扶自有一定，形合则气不牵扯，形不合则气必濡滞，逐处体验无遗纤细为妙。</p>
+<p class="mp_main">以上阴阳入扶各论，斜正仰俯左右旋转诸说，此即形气合一，一身之势法也。所谓浑元一气是也，此即五势梅花桩行功之势法也。前进后退，左旋右转，一身之法俱以五势为主。五势者，大势、顺势、拗势、小势、败势是也。正势大势也，直出者顺势也，十字势为拗势也。曲丁腿势为小势，斜侧势为败势也。此即五势梅花拳是也，又为五势梅花桩，在桩上为梅花桩，在地上为落地梅花也。</p>
 <p class="mp_separator"></p>
-<p class="mp_comment">︻評注：以上各篇入扶之說，都是從入氣的角度指導練功的文章。八方群步忽左忽右，忽前忽後，忽仰忽俯，忽進忽退，忽斜忽正，勢無定形，腳無定步。佛教禪宗修持的方法就是：﹁ 一切佛法總不用學，唯學無求無著。無求即心不生，無著即心不滅，不生不滅即是佛。﹂ 他們還認為：﹁ 恰恰無心用，恰恰用功時也，蓋有功可用則縛於功，無功之功乃為無縛之真用功。﹂ 所以禪宗論修悟之道，亦常自立自破。佛法與道法相同，老子的﹁ 道無形﹂ 之理亦是如此。梅花樁拳法的練功之道也是自立自破的，因為凡是練功的方法，到了一定的階段後就成了練功者的束縛，必須打破該功法、套路的框框。只有這樣練功者才能無拘無束、無阻無礙，且有靈巧應變之能力。因此，梅花樁拳法亦是有套路而無套路，亂而卻不可亂的，只要﹁ 氣亦隨之亂為入扶﹂ 及﹁ 陰陽不相悖謬﹂ 即可。練功者只要做到﹁ 形氣合一﹂ ，不必拘泥於死板的套路和招勢，這就是真正的拳法。︼</p>
+<p class="mp_comment">︻评注：以上各篇入扶之说，都是从入气的角度指导练功的文章。八方群步忽左忽右，忽前忽后，忽仰忽俯，忽进忽退，忽斜忽正，势无定形，脚无定步。佛教禅宗修持的方法就是：﹁ 一切佛法总不用学，唯学无求无著。无求即心不生，无著即心不灭，不生不灭即是佛。﹂ 他们还认为：﹁ 恰恰无心用，恰恰用功时也，盖有功可用则缚于功，无功之功乃为无缚之真用功。﹂ 所以禅宗论修悟之道，亦常自立自破。佛法与道法相同，老子的﹁ 道无形﹂ 之理亦是如此。梅花桩拳法的练功之道也是自立自破的，因为凡是练功的方法，到了一定的阶段后就成了练功者的束缚，必须打破该功法、套路的框框。只有这样练功者才能无拘无束、无阻无碍，且有灵巧应变之能力。因此，梅花桩拳法亦是有套路而无套路，乱而却不可乱的，只要﹁ 气亦随之乱为入扶﹂ 及﹁ 阴阳不相悖谬﹂ 即可。练功者只要做到﹁ 形气合一﹂ ，不必拘泥于死板的套路和招势，这就是真正的拳法。︼</p>
 <p id="calibre_pb_6" class="mp_end"></p>
 </body>
 </html>
