--- a/epub_source/OEBPS/Text/index_split_007.html
+++ b/epub_source/OEBPS/Text/index_split_007.html
@@ -10,10 +10,10 @@
  
 </head>
   <body class="mp_body">
-<h1 class="mp_title" u00024commentu0005bu00027idu00027u0005d="" id="calibre_toc_16">論頭</h1>
-<p class="mp_main">頭圓像天，為法陽之會，為精髓之海，為督任交會之處，統領一身之氣，陰陽入扶全視乎此。此處合則一身之氣俱入，此處不合則全身之氣俱失。其氣之凝聚落點有一定之處，不可不知。正俯勢為入陽氣，頭必俯而栽，氣落額顱印堂間；正仰勢為入陰氣，頭必仰而掀，氣落腦後風府間；正側勢為陰陽氣俱入，頭必側而栽，氣落頭角耳上也；斜側俯勢為陰陽氣斜入，頭必俯而歪，氣落額角日月間；斜側仰勢為陰氣斜入，頭必仰而偏，氣落枕骨近項間；直勢不仰不俯，不偏不斜為陰陽直入，頭必正而直，氣頂百會正頂心。又要知催氣之法，為不牽扯，如仰勢入陰氣，下頦掀、胸必昂、腹必鼓、手必舉、腳必翹，則三尖一氣陰氣自入矣。俯勢入陽氣，下頦勾、背必弓、手必落、腳根掀，則三尖一氣陽氣自入矣。側勢陰陽俱入，腮必掀、肋必提、一腳顛、一腳落、一膊起、一膊插，則三尖一氣陰陽並入矣。直起勢陰陽上沖，頭必頂肩必聳，腳起縱者翹尖提膝，不起縱者顛尖伸膝，則三尖一氣陰陽俱入矣。斜側仰俯可以類推。</p>
+<h1 class="mp_title" u00024commentu0005bu00027idu00027u0005d="" id="calibre_toc_16">论头</h1>
+<p class="mp_main">头圆像天，为法阳之会，为精髓之海，为督任交会之处，统领一身之气，阴阳入扶全视乎此。此处合则一身之气俱入，此处不合则全身之气俱失。其气之凝聚落点有一定之处，不可不知。正俯势为入阳气，头必俯而栽，气落额颅印堂间；正仰势为入阴气，头必仰而掀，气落脑后风府间；正侧势为阴阳气俱入，头必侧而栽，气落头角耳上也；斜侧俯势为阴阳气斜入，头必俯而歪，气落额角日月间；斜侧仰势为阴气斜入，头必仰而偏，气落枕骨近项间；直势不仰不俯，不偏不斜为阴阳直入，头必正而直，气顶百会正顶心。又要知催气之法，为不牵扯，如仰势入阴气，下颏掀、胸必昂、腹必鼓、手必举、脚必翘，则三尖一气阴气自入矣。俯势入阳气，下颏勾、背必弓、手必落、脚根掀，则三尖一气阳气自入矣。侧势阴阳俱入，腮必掀、肋必提、一脚颠、一脚落、一膊起、一膊插，则三尖一气阴阳并入矣。直起势阴阳上冲，头必顶肩必耸，脚起纵者翘尖提膝，不起纵者颠尖伸膝，则三尖一气阴阳俱入矣。斜侧仰俯可以类推。</p>
 <p class="mp_separator"></p>
-<p class="mp_comment">︻評注：本文旨在說明﹁ 頭﹂ 在練功與技擊中的重要性，它統領一身之氣，全身之陰陽能否和諧全要看它。因此，不論在練功或枝擊中，都要注意﹁ 頭﹂ 的俯仰斜正，使其與各種拳勢身法相合，做到三尖——頭尖、手尖、足尖一氣，則陰陽俱入，百脈流暢，全身成一整體矣。︼</p>
+<p class="mp_comment">︻评注：本文旨在说明﹁ 头﹂ 在练功与技击中的重要性，它统领一身之气，全身之阴阳能否和谐全要看它。因此，不论在练功或枝击中，都要注意﹁ 头﹂ 的俯仰斜正，使其与各种拳势身法相合，做到三尖——头尖、手尖、足尖一气，则阴阳俱入，百脉流畅，全身成一整体矣。︼</p>
 <p id="calibre_pb_8" class="mp_end"></p>
 </body>
 </html>
