--- a/epub_source/OEBPS/Text/index_split_011.html
+++ b/epub_source/OEBPS/Text/index_split_011.html
@@ -10,11 +10,11 @@
  
 </head>
   <body class="mp_body">
-<h1 class="mp_title" u00024commentu0005bu00027idu00027u0005d="" id="calibre_toc_19">論足</h1>
-<p class="mp_main">古人雲：頭圓像天，足方像地。又雲：手有反覆以像天，足有覆無反以像地，以其能承載一身之重，靜如山嶽，有盤石之穩，動如舟楫，無傾側之憂，如地之鎮靜而不動，平穩而難搖也。其用法虛實，﹁ 有兩腳俱虛俱實者，有前虛而後實，後虛而前實者，有左虛而右實，右虛而左實者，有一腳之尖跟楞掌應虛而應實者。總之，全實則動移不利，不實則不穩，有顛倒之患；不虛則不靈，全虛則輕飄不穩，有搖晃之憂，虛實相濟方得自然之妙。足有伸翹，﹁ 足尖伸而下入者，氣下降而栽沉也，足尖翹而上勾者，氣升上而飄浮也。﹂ 有橫順，﹁ 足尖有兩腳齊橫兩腳齊順者，有丁字步，一腳橫，一腳順也，有八字步，兩腳尖微向外開，如八字之鋪也，有雁行步，兩腳半橫半順，排列一樣如雁行之等齊也。﹂ 有輪擺，﹁ 有半旋輪，倒載車輪，仰俯無底筋鬥輪，擺有內擺，有外擺，各有其用也。﹂ 有灑蹬，﹁ 灑腳後伸，蹬腳前撞。﹂ 有踢跺，﹁ 踢腳有翹跺腳、橫截腳﹂ 。有擰搗，﹁ 擰腳尖旋，搗腳跟摧﹂ 能催送一身之氣，﹁ 身去腳不去，則牽扯而氣散。﹂ 何以扶助前手之力，﹁ 前手之氣在後腳，後腳不隨，身氣不入，終止半筋不能充滿。﹂ 足為百骸之舟楫，一腿之領袖，少有不合全體之氣俱不入矣。步法之用，不可不細為區別，側勢前撲者，雁行步半斜順也，十字前探者，丁字步前微橫後全順也，倒吊曳身者，亦丁字步前順後橫，後步顛順也，小四平落者，八字步腳尖兩邊開也，直身上攻者，雙顛步並齊展，腳背尖直豎也，起縱步一腳起一腳落，前進者後步先動，後退者前步先動，起要翹腳尖，落要伸腳尖，擠步仄身前進者俱橫步，擠步正身前進者，前步微橫後步全順，俱是後步先動，此即擠進後摧前也；搶步仄步前進者，俱橫步。搶步正身前進者，前步橫後步順，俱是前步先動，搶前攜後前帶後也；拉步側身後退者，兩腳俱橫，拉步正身後退者，前步橫後步順，俱是後步先退將前步拉回也；起縱橫剪者，左翦先動右步，右翦先動左步，起翹腳尖，落伸腳尖也。亂點無定步，兩腳尖俱伸擎顛踏任意也。紐縹步輪旋，腳尖俱顛，落點外楞著力，推我後退，兩腳尖顛擎，推我不倒。分摟前栽，弓背磕頭，兩腳齊顛。硬膝退翦車輪腳，伸尖直腿，不可勾腳以回氣，平徜步，兩腳伸直猛蹬，平身直躥。略舉大概，以明變化，總以隨勢順應為妙，不可乖其勢逆其氣，步法之用斯得之矣。</p>
+<h1 class="mp_title" u00024commentu0005bu00027idu00027u0005d="" id="calibre_toc_19">论足</h1>
+<p class="mp_main">古人云：头圆像天，足方像地。又云：手有反复以像天，足有覆无反以像地，以其能承载一身之重，静如山岳，有盘石之稳，动如舟楫，无倾侧之忧，如地之镇静而不动，平稳而难摇也。其用法虚实，﹁ 有两脚俱虚俱实者，有前虚而后实，后虚而前实者，有左虚而右实，右虚而左实者，有一脚之尖跟楞掌应虚而应实者。总之，全实则动移不利，不实则不稳，有颠倒之患；不虚则不灵，全虚则轻飘不稳，有摇晃之忧，虚实相济方得自然之妙。足有伸翘，﹁ 足尖伸而下入者，气下降而栽沉也，足尖翘而上勾者，气升上而飘浮也。﹂ 有横顺，﹁ 足尖有两脚齐横两脚齐顺者，有丁字步，一脚横，一脚顺也，有八字步，两脚尖微向外开，如八字之铺也，有雁行步，两脚半横半顺，排列一样如雁行之等齐也。﹂ 有轮摆，﹁ 有半旋轮，倒载车轮，仰俯无底筋斗轮，摆有内摆，有外摆，各有其用也。﹂ 有洒蹬，﹁ 洒脚后伸，蹬脚前撞。﹂ 有踢跺，﹁ 踢脚有翘跺脚、横截脚﹂ 。有拧捣，﹁ 拧脚尖旋，捣脚跟摧﹂ 能催送一身之气，﹁ 身去脚不去，则牵扯而气散。﹂ 何以扶助前手之力，﹁ 前手之气在后脚，后脚不随，身气不入，终止半筋不能充满。﹂ 足为百骸之舟楫，一腿之领袖，少有不合全体之气俱不入矣。步法之用，不可不细为区别，侧势前扑者，雁行步半斜顺也，十字前探者，丁字步前微横后全顺也，倒吊曳身者，亦丁字步前顺后横，后步颠顺也，小四平落者，八字步脚尖两边开也，直身上攻者，双颠步并齐展，脚背尖直竖也，起纵步一脚起一脚落，前进者后步先动，后退者前步先动，起要翘脚尖，落要伸脚尖，挤步仄身前进者俱横步，挤步正身前进者，前步微横后步全顺，俱是后步先动，此即挤进后摧前也；抢步仄步前进者，俱横步。抢步正身前进者，前步横后步顺，俱是前步先动，抢前携后前带后也；拉步侧身后退者，两脚俱横，拉步正身后退者，前步横后步顺，俱是后步先退将前步拉回也；起纵横剪者，左翦先动右步，右翦先动左步，起翘脚尖，落伸脚尖也。乱点无定步，两脚尖俱伸擎颠踏任意也。纽缥步轮旋，脚尖俱颠，落点外楞著力，推我后退，两脚尖颠擎，推我不倒。分搂前栽，弓背磕头，两脚齐颠。硬膝退翦车轮脚，伸尖直腿，不可勾脚以回气，平徜步，两脚伸直猛蹬，平身直蹿。略举大概，以明变化，总以随势顺应为妙，不可乖其势逆其气，步法之用斯得之矣。</p>
 <p class="mp_separator"></p>
-<p class="mp_comment">︻評注：文中說明了足是武術運動的根基，足的用法全在於虛實相濟方有自然之妙。在各種拳勢步法中，兩腳虛實相宜方能靜之如山嶽有磐石之穩，動之則輕靈便捷，清楚利落，﹁ 腳落如貓行﹂ 之語就是此意。</p>
-<p class="mp_comment">武林素有﹁ 梅拳善長於步﹂ 之稱，梅花樁武功亦很重視練步，它的技擊也多以步勝人。梅花樁技擊中之抓、拿、摔、打本身就很厲害，若再與步法結合，則如虎添翼，威力倍增。因而，足在步法訓練中是非常重要的。︼</p>
+<p class="mp_comment">︻评注：文中说明了足是武术运动的根基，足的用法全在于虚实相济方有自然之妙。在各种拳势步法中，两脚虚实相宜方能静之如山岳有磐石之稳，动之则轻灵便捷，清楚利落，﹁ 脚落如猫行﹂ 之语就是此意。</p>
+<p class="mp_comment">武林素有﹁ 梅拳善长于步﹂ 之称，梅花桩武功亦很重视练步，它的技击也多以步胜人。梅花桩技击中之抓、拿、摔、打本身就很厉害，若再与步法结合，则如虎添翼，威力倍增。因而，足在步法训练中是非常重要的。︼</p>
 <p id="calibre_pb_11" class="mp_end"></p>
 </body>
 </html>
