--- a/epub_source/OEBPS/Text/index_split_013.html
+++ b/epub_source/OEBPS/Text/index_split_013.html
@@ -10,12 +10,12 @@
  
 </head>
   <body class="mp_body">
-<h1 class="mp_title" u00024commentu0005bu00027idu00027u0005d="" id="calibre_toc_21">聚精會神氣力淵源論</h1>
-<p class="mp_main">神者，氣之靈明也，是神化於氣，氣無精不化，是氣又化於精。蓋人之生也，稟先天之神以化氣，氣化精以成此形骸。既生之後，賴後天水穀之精液以化精，積精以化氣，積氣以化神，結於丹鼎，會於黃庭，靈妙不測剛勇莫敵，為內丹之至寶，氣力之根本也。氣無形屬陽而化於神，血有質屬陰而化於精，神虛故靈明不測變化無窮，精實故充塞凝聚堅硬莫敵，神必藉精，精必附神，精神合一，氣力乃成。夫乃知氣力者，即精神能勝物質之謂也，無精神則無氣力矣。武備知</p>
-<p class="mp_main">此，惟務聚精會神以壯氣力，但不知精何以聚，神何以會，是以殫畢生心力而漫無適從也。夫精以神聚，神以氣會，欲求精聚神會，非聚氣不能也。聚氣之法，惟將穀道一撮，玉莖一束，使在下之氣盡提於上而不下走，采天地之氣盡力一吸，使在上之氣盡歸於下而不上散，上下凝合團聚中宮，則氣聚而精凝，精凝而神充，自然由內達外無處不堅硬矣。即南林所謂內實精神之說也。但須練之於平日，早成根蒂，方能用之當前，無不堅實，不然如炮中無硝黃，弩弓無弦箭，</p>
-<p class="mp_main">滿腔空洞，無物可發。欲求猛勇疾快如海傾山倒，勢不可遏，必不能也。此為練氣練形之最吃緊者，謹之秘之，慎勿輕傳匪人。</p>
+<h1 class="mp_title" u00024commentu0005bu00027idu00027u0005d="" id="calibre_toc_21">聚精会神气力渊源论</h1>
+<p class="mp_main">神者，气之灵明也，是神化于气，气无精不化，是气又化于精。盖人之生也，禀先天之神以化气，气化精以成此形骸。既生之后，赖后天水谷之精液以化精，积精以化气，积气以化神，结于丹鼎，会于黄庭，灵妙不测刚勇莫敌，为内丹之至宝，气力之根本也。气无形属阳而化于神，血有质属阴而化于精，神虚故灵明不测变化无穷，精实故充塞凝聚坚硬莫敌，神必藉精，精必附神，精神合一，气力乃成。夫乃知气力者，即精神能胜物质之谓也，无精神则无气力矣。武备知</p>
+<p class="mp_main">此，惟务聚精会神以壮气力，但不知精何以聚，神何以会，是以殚毕生心力而漫无适从也。夫精以神聚，神以气会，欲求精聚神会，非聚气不能也。聚气之法，惟将谷道一撮，玉茎一束，使在下之气尽提于上而不下走，采天地之气尽力一吸，使在上之气尽归于下而不上散，上下凝合团聚中宫，则气聚而精凝，精凝而神充，自然由内达外无处不坚硬矣。即南林所谓内实精神之说也。但须练之于平日，早成根蒂，方能用之当前，无不坚实，不然如炮中无硝黄，弩弓无弦箭，</p>
+<p class="mp_main">满腔空洞，无物可发。欲求猛勇疾快如海倾山倒，势不可遏，必不能也。此为练气练形之最吃紧者，谨之秘之，慎勿轻传匪人。</p>
 <p class="mp_separator"></p>
-<p class="mp_comment">︻評注：本文指出﹁ 神者，氣之靈明也﹂ ，即﹁ 神﹂ 是﹁ 氣﹂ 的靈魂。練梅花樁武功者練形、練氣，還要練神。練功者積精以化氣，積氣以化神，結成內丹則﹁ 靈妙莫測，剛勇莫敵﹂ ，這才是人的氣力之根本。梅花樁文武大法認為，人的氣力之來源不單純是筋肉，而是精氣神合一的結果。實際上這是中國傳統文化以整體觀來看待氣力的問題。精氣神合一，內外成為一體，人體各部分的筋骨肌肉都諧和一體，當然要發出極大的力量。如果在意念支配下，單純使用肌肉的力量，則只能是局部的，全身不能諧和，內外不能一致，則身體各部散亂而又相互牽扯，其氣力自然要受到一定的限制。在上述問題上，武功鍛煉與現代體育、武術技擊與拳擊角力等都有重大的分歧。這個分歧反映了中西文化在根本觀點上的重大差異。武術理論是與中國的傳統文化一脈相承的，梅花樁功更是中國傳統文化的一個窗口，如果不了解中國傳統文化的特點，也就難以理解本文的論點了。︼</p>
+<p class="mp_comment">︻评注：本文指出﹁ 神者，气之灵明也﹂ ，即﹁ 神﹂ 是﹁ 气﹂ 的灵魂。练梅花桩武功者练形、练气，还要练神。练功者积精以化气，积气以化神，结成内丹则﹁ 灵妙莫测，刚勇莫敌﹂ ，这才是人的气力之根本。梅花桩文武大法认为，人的气力之来源不单纯是筋肉，而是精气神合一的结果。实际上这是中国传统文化以整体观来看待气力的问题。精气神合一，内外成为一体，人体各部分的筋骨肌肉都谐和一体，当然要发出极大的力量。如果在意念支配下，单纯使用肌肉的力量，则只能是局部的，全身不能谐和，内外不能一致，则身体各部散乱而又相互牵扯，其气力自然要受到一定的限制。在上述问题上，武功锻炼与现代体育、武术技击与拳击角力等都有重大的分歧。这个分歧反映了中西文化在根本观点上的重大差异。武术理论是与中国的传统文化一脉相承的，梅花桩功更是中国传统文化的一个窗口，如果不了解中国传统文化的特点，也就难以理解本文的论点了。︼</p>
 <p id="calibre_pb_13" class="mp_end"></p>
 </body>
 </html>
