--- a/epub_source/OEBPS/Text/index_split_018.html
+++ b/epub_source/OEBPS/Text/index_split_018.html
@@ -10,8 +10,8 @@
  
 </head>
   <body class="mp_body">
-<h1 class="mp_title" u00024commentu0005bu00027idu00027u0005d="" id="calibre_toc_25">六合說</h1>
-<p class="mp_main">何為六合?人之一身分為內三合外三合。內三合者，心與意合，意與氣合，氣與力合。外三合者，肩與胯合，肘與膝合，手與足合。是為六合。所謂內三合要動，外三合必隨，心一動全體俱動，稍有一處不合，發手必不勇猛，落點必不堅剛，欲求疾快猛，必不能也。在練習時起身落點要整，自然能進能退，動如風吹不停，行如流星趕月，自然能達到上乘矣。</p>
+<h1 class="mp_title" u00024commentu0005bu00027idu00027u0005d="" id="calibre_toc_25">六合说</h1>
+<p class="mp_main">何为六合?人之一身分为内三合外三合。内三合者，心与意合，意与气合，气与力合。外三合者，肩与胯合，肘与膝合，手与足合。是为六合。所谓内三合要动，外三合必随，心一动全体俱动，稍有一处不合，发手必不勇猛，落点必不坚刚，欲求疾快猛，必不能也。在练习时起身落点要整，自然能进能退，动如风吹不停，行如流星赶月，自然能达到上乘矣。</p>
 <p id="calibre_pb_18" class="mp_end"></p>
 </body>
 </html>
