--- a/epub_source/OEBPS/Text/index_split_023.html
+++ b/epub_source/OEBPS/Text/index_split_023.html
@@ -10,11 +10,11 @@
  
 </head>
   <body class="mp_body">
-<h1 class="mp_title" u00024commentu0005bu00027idu00027u0005d="" id="calibre_toc_30">三尖照論</h1>
-<p class="mp_main">練形不外動靜，動貴氣擎不散，靜如山嶽難搖，方能來去無失著。每見俗學動靜俱不穩妥，蓋未究三尖之照與不照也。</p>
-<p class="mp_main">三尖照，則無東斜西歪之患，三尖不照，則此牽彼扯必有搖晃之失。如十字勢左腳前右手前者，右手正照左腳尖，頭照右手，則上中下一線，不歪不斜必穩。側身右腳前，右手前順勢者，頭照右手，右手照右腳必穩。餘仿此。</p>
+<h1 class="mp_title" u00024commentu0005bu00027idu00027u0005d="" id="calibre_toc_30">三尖照论</h1>
+<p class="mp_main">练形不外动静，动贵气擎不散，静如山岳难摇，方能来去无失著。每见俗学动静俱不稳妥，盖未究三尖之照与不照也。</p>
+<p class="mp_main">三尖照，则无东斜西歪之患，三尖不照，则此牵彼扯必有摇晃之失。如十字势左脚前右手前者，右手正照左脚尖，头照右手，则上中下一线，不歪不斜必稳。侧身右脚前，右手前顺势者，头照右手，右手照右脚必稳。余仿此。</p>
 <p class="mp_separator"></p>
-<p class="mp_comment">︻評注：動之氣擎不散，靜如山嶽難搖，方有動靜互根之效，此即由外丹煉內丹之方法。但如要氣擎不散，必須百脈暢流，道路滑利，行氣如風輪旋轉，滾走不停，就必須動作准確，落點清楚；若要靜之如山嶽無搖晃之憂，必須注意姿勢正確，因此三尖相照就是練功時的一個重要原則。︼</p>
+<p class="mp_comment">︻评注：动之气擎不散，静如山岳难摇，方有动静互根之效，此即由外丹炼内丹之方法。但如要气擎不散，必须百脉畅流，道路滑利，行气如风轮旋转，滚走不停，就必须动作准确，落点清楚；若要静之如山岳无摇晃之忧，必须注意姿势正确，因此三尖相照就是练功时的一个重要原则。︼</p>
 <p id="calibre_pb_23" class="mp_end"></p>
 </body>
 </html>
