--- a/epub_source/OEBPS/Text/index_split_024.html
+++ b/epub_source/OEBPS/Text/index_split_024.html
@@ -10,10 +10,10 @@
  
 </head>
   <body class="mp_body">
-<h1 class="mp_title" u00024commentu0005bu00027idu00027u0005d="" id="calibre_toc_31">三尖到論</h1>
-<p class="mp_main">三尖到者動靜一起俱到也，不此先彼後，此速彼遲，互有牽扯而不利也。蓋氣之著人，落點雖只一尖，而摧此一尖之氣則在全體，一尖不到即有牽扯，身氣難入矣。自練不靈快，摧人不堅剛，俱坐此失。凡練形者，須刻刻留意此三處，方為合竅。</p>
+<h1 class="mp_title" u00024commentu0005bu00027idu00027u0005d="" id="calibre_toc_31">三尖到论</h1>
+<p class="mp_main">三尖到者动静一起俱到也，不此先彼后，此速彼迟，互有牵扯而不利也。盖气之著人，落点虽只一尖，而摧此一尖之气则在全体，一尖不到即有牵扯，身气难入矣。自练不灵快，摧人不坚刚，俱坐此失。凡练形者，须刻刻留意此三处，方为合窍。</p>
 <p class="mp_separator"></p>
-<p class="mp_comment">︻評注：梅花樁口訣有：﹁ 上步須要先上身，腳手齊到才為真﹂ ，三尖到也就是腳手齊到之意。無論練功或技擊，若不能腳手齊到，則此牽彼扯，此先彼後，動作散亂，落點不整。因此三尖到必須在平時練功時就養成習慣，方能一動則全身俱動，手腳合拍上下照應。︼</p>
+<p class="mp_comment">︻评注：梅花桩口诀有：﹁ 上步须要先上身，脚手齐到才为真﹂ ，三尖到也就是脚手齐到之意。无论练功或技击，若不能脚手齐到，则此牵彼扯，此先彼后，动作散乱，落点不整。因此三尖到必须在平时练功时就养成习惯，方能一动则全身俱动，手脚合拍上下照应。︼</p>
 <p id="calibre_pb_24" class="mp_end"></p>
 </body>
 </html>
