--- a/epub_source/OEBPS/Text/index_split_025.html
+++ b/epub_source/OEBPS/Text/index_split_025.html
@@ -10,10 +10,10 @@
  
 </head>
   <body class="mp_body">
-<h1 class="mp_title" u00024commentu0005bu00027idu00027u0005d="" id="calibre_toc_32">擎停成論</h1>
-<p class="mp_main">此交手訣，非練法也。未交手先將中氣吸聚中宮滿腹堅硬，全體振動，勃然莫遏。如行軍未對敵之先預將士聚齊，號令嚴明，鼓齊勇氣，以待敵兵，使氣有根非空洞虛殼也。擎者即氣血暢流，無牽無掛，無阻無礙，連綿不斷地自然運行，此即靜以待敵之態也。停者已交手也，氣聚神凝，落點不先不後，不偏不倚，陰陽均勻停停不多不少也。成者已交手落點之後，仍還原以待再發也。蓋落點而不還原，氣散而不聚或氣聚而不散，則出手後不可繼而再發矣。故陰勢陽出者，仍還之以陰，陽勢陰出者，仍還之以陽，成而不散，生生無窮，雖千萬手氣總不散，更兼內丹素成食氣不絕，即不得食而真元充足，自無餓餒之患。曆考古之名將，愈戰愈猛勇增百倍者，皆是此訣，非別有元竅也。</p>
+<h1 class="mp_title" u00024commentu0005bu00027idu00027u0005d="" id="calibre_toc_32">擎停成论</h1>
+<p class="mp_main">此交手诀，非练法也。未交手先将中气吸聚中宫满腹坚硬，全体振动，勃然莫遏。如行军未对敌之先预将士聚齐，号令严明，鼓齐勇气，以待敌兵，使气有根非空洞虚壳也。擎者即气血畅流，无牵无挂，无阻无碍，连绵不断地自然运行，此即静以待敌之态也。停者已交手也，气聚神凝，落点不先不后，不偏不倚，阴阳均匀停停不多不少也。成者已交手落点之后，仍还原以待再发也。盖落点而不还原，气散而不聚或气聚而不散，则出手后不可继而再发矣。故阴势阳出者，仍还之以阴，阳势阴出者，仍还之以阳，成而不散，生生无穷，虽千万手气总不散，更兼内丹素成食气不绝，即不得食而真元充足，自无饿馁之患。历考古之名将，愈战愈猛勇增百倍者，皆是此诀，非别有元窍也。</p>
 <p class="mp_separator"></p>
-<p class="mp_comment">︻評注：此文說明梅花樁技擊中﹁ 擎停成﹂ 之要訣。動貴氣擎不散，此處之﹁ 擎﹂ 應意為內氣的流暢，自然的聚散等，說的是技擊前的准備，靜以待動之態；停者已經落點，氣聚神凝，陰陽停停均勻恰到好處、不偏不倚、准確無誤；成者落點之後還原再發，成成不散。梅花樁技擊一手即，則千手萬手連續不斷，使敵應接不暇，無法招架。梅花樁武功﹁ 氣化﹂ 之後，自有食氣之法、辟穀之能，可有夜戰馬超之精力。由於真元充足，內氣調動、愈戰愈勇，能勇增百倍，雖不得食亦無饑餓疲倦之現象。︼</p>
+<p class="mp_comment">︻评注：此文说明梅花桩技击中﹁ 擎停成﹂ 之要诀。动贵气擎不散，此处之﹁ 擎﹂ 应意为内气的流畅，自然的聚散等，说的是技击前的准备，静以待动之态；停者已经落点，气聚神凝，阴阳停停均匀恰到好处、不偏不倚、准确无误；成者落点之后还原再发，成成不散。梅花桩技击一手即，则千手万手连续不断，使敌应接不暇，无法招架。梅花桩武功﹁ 气化﹂ 之后，自有食气之法、辟谷之能，可有夜战马超之精力。由于真元充足，内气调动、愈战愈勇，能勇增百倍，虽不得食亦无饥饿疲倦之现象。︼</p>
 <p id="calibre_pb_25" class="mp_end"></p>
 </body>
 </html>
