--- a/epub_source/OEBPS/Text/index_split_027.html
+++ b/epub_source/OEBPS/Text/index_split_027.html
@@ -10,10 +10,10 @@
  
 </head>
   <body class="mp_body">
-<h1 class="mp_title" u00024commentu0005bu00027idu00027u0005d="" id="calibre_toc_34">行氣論</h1>
-<p class="mp_main">任他勇猛氣總偏，此有彼無是天然，直截橫兮橫截直，一氣摧二二摧三，由他滑快歸遠路，我守安逸自粘連，如問是甚元妙訣，只在行氣一動間。此交手認路占巧法也。手一出，氣必偏著一面，不能四面俱著力，直出者無橫力，我截其橫，橫出者無直力，我截其直，上出者無下力，我挑其下，下劈者無上力，我劈其上，斜正屈伸，無不皆然，此搗虛之法，攻其不備也。我出手，他若用此法，我不回手，惟轉手頭催二氣以打之，他再變化，我摧三氣以打之，此埋伏之法，出其不意也。但需占其行氣方能入殼，蓋方接手彼氣才來，其氣未停，我乘而摧之，則可東可西無不左右逢源。其機只在一動，他動我即動，他自不暇為力，若待他不動而我方動，他反乘我之行氣也，其間不容毫變，學者且宜留心，以五勢梅花樁為主要用功方法。</p>
+<h1 class="mp_title" u00024commentu0005bu00027idu00027u0005d="" id="calibre_toc_34">行气论</h1>
+<p class="mp_main">任他勇猛气总偏，此有彼无是天然，直截横兮横截直，一气摧二二摧三，由他滑快归远路，我守安逸自粘连，如问是甚元妙诀，只在行气一动间。此交手认路占巧法也。手一出，气必偏著一面，不能四面俱著力，直出者无横力，我截其横，横出者无直力，我截其直，上出者无下力，我挑其下，下劈者无上力，我劈其上，斜正屈伸，无不皆然，此捣虚之法，攻其不备也。我出手，他若用此法，我不回手，惟转手头催二气以打之，他再变化，我摧三气以打之，此埋伏之法，出其不意也。但需占其行气方能入壳，盖方接手彼气才来，其气未停，我乘而摧之，则可东可西无不左右逢源。其机只在一动，他动我即动，他自不暇为力，若待他不动而我方动，他反乘我之行气也，其间不容毫变，学者且宜留心，以五势梅花桩为主要用功方法。</p>
 <p class="mp_separator"></p>
-<p class="mp_comment">︻評注：本文介紹了兩個重要的技擊方法，一為搗虛之法，即交手中避實就虛、攻其無備也；二為埋伏之法，即交手之中敵不動我不動，敵微動我先動。注意：此時他動我亦動，其間不容毫發，不能有一點猶豫。否則就要錯過時機，不能占其行氣。敵微動時彼氣才發，我動則乘而摧之，則可東可西無不左右逢源，這時我打哪裏都可以，其機會只在一動的瞬間，他自不暇為力。因此，搗虛之法要分清敵之虛實。既要摧敵之虛，所以要注意打什麼地方，而埋伏之法主要是把握時機，才能出敵不意。︼</p>
+<p class="mp_comment">︻评注：本文介绍了两个重要的技击方法，一为捣虚之法，即交手中避实就虚、攻其无备也；二为埋伏之法，即交手之中敌不动我不动，敌微动我先动。注意：此时他动我亦动，其间不容毫发，不能有一点犹豫。否则就要错过时机，不能占其行气。敌微动时彼气才发，我动则乘而摧之，则可东可西无不左右逢源，这时我打哪里都可以，其机会只在一动的瞬间，他自不暇为力。因此，捣虚之法要分清敌之虚实。既要摧敌之虚，所以要注意打什么地方，而埋伏之法主要是把握时机，才能出敌不意。︼</p>
 <p id="calibre_pb_27" class="mp_end"></p>
 </body>
 </html>
