--- a/epub_source/OEBPS/Text/index_split_031.html
+++ b/epub_source/OEBPS/Text/index_split_031.html
@@ -10,10 +10,10 @@
  
 </head>
   <body class="mp_body">
-<h1 class="mp_title" u00024commentu0005bu00027idu00027u0005d="" id="calibre_toc_38">氣論</h1>
-<p class="mp_main">陰陽字之祖，應為氣之先，陽者聳乎上，其勢不可攀，陰者伏於下，如雲之覆山，莫作呼吸論，只以升降言。承者承乎上，停者氣不偏，擎者不可動，沉者氣下鑽，開勁如蕩舟，入者似水淹，盡勁多回轉，崩如飛炮煙，創勁勢猛勇，劈勁如刀砍，牽勢似拉繩，推勢似推山，敵勢直不回，吃勢如運鉗，粘者即不離，隨者如星趕，閃勢多旁落，驚勢弩離弦，勾者勢多曲，連如藕絲牽，進者不可遏，退者似龍蟠，踏似石觸地，掛如鋼鉤搭，次序休紊亂，大勢須分辨。</p>
+<h1 class="mp_title" u00024commentu0005bu00027idu00027u0005d="" id="calibre_toc_38">气论</h1>
+<p class="mp_main">阴阳字之祖，应为气之先，阳者耸乎上，其势不可攀，阴者伏于下，如云之覆山，莫作呼吸论，只以升降言。承者承乎上，停者气不偏，擎者不可动，沉者气下钻，开劲如荡舟，入者似水淹，尽劲多回转，崩如飞炮烟，创劲势猛勇，劈劲如刀砍，牵势似拉绳，推势似推山，敌势直不回，吃势如运钳，粘者即不离，随者如星赶，闪势多旁落，惊势弩离弦，勾者势多曲，连如藕丝牵，进者不可遏，退者似龙蟠，踏似石触地，挂如钢钩搭，次序休紊乱，大势须分辨。</p>
 <p class="mp_separator"></p>
-<p class="mp_comment">︻評注：梅花樁武功是神氣合一和形氣合一的，形也就是氣、也就是神。本文談了練功與技擊中各種拳勢的內氣特點。陰陽是最基本的，以下便是承、停、擎、沉、開、入、盡、崩、創、劈、牽、推、敵、吃、粘、隨、閃、勾、連、進、退、踏、掛等25 種勁︻勢︼的內氣運行特點。本文旨在提醒練功與技擊者，不僅要注意外形的勁︻勢︼，還要注意其內氣運行的特點。︼</p>
+<p class="mp_comment">︻评注：梅花桩武功是神气合一和形气合一的，形也就是气、也就是神。本文谈了练功与技击中各种拳势的内气特点。阴阳是最基本的，以下便是承、停、擎、沉、开、入、尽、崩、创、劈、牵、推、敌、吃、粘、随、闪、勾、连、进、退、踏、挂等25 种劲︻势︼的内气运行特点。本文旨在提醒练功与技击者，不仅要注意外形的劲︻势︼，还要注意其内气运行的特点。︼</p>
 <p id="calibre_pb_31" class="mp_end"></p>
 </body>
 </html>
