--- a/epub_source/OEBPS/Text/index_split_033.html
+++ b/epub_source/OEBPS/Text/index_split_033.html
@@ -10,22 +10,22 @@
  
 </head>
   <body class="mp_body">
-<h1 class="mp_title" u00024commentu0005bu00027idu00027u0005d="" id="calibre_toc_40">二十四氣</h1>
-<p class="mp_main">二十四氣為一周年，每年有十二個月，每月有兩節，每節與每節的氣候之不同，即合與拳之二十四勢，有二十四種不同之氣。</p>
-<p class="mp_main">陽 猿猴獻桃 陰 犀牛望月</p>
-<p class="mp_main">承 雙虹駕彩 停 仙人捧盤</p>
-<p class="mp_main">擎 白鶴亮翅 沉 雙龍入洞</p>
-<p class="mp_main">開 提戟搜山 入 巨蟒入穴</p>
-<p class="mp_main">創 猛虎翻身 劈 懸崖擂鼓</p>
-<p class="mp_main">牽 千金墜石 推 雙手推山</p>
-<p class="mp_main">敵 真符送書 吃 猛虎探爪</p>
-<p class="mp_main">粘 片膠入麻 隨 流星趕月</p>
-<p class="mp_main">閃 白虎靠山 驚 飛燕投林</p>
-<p class="mp_main">勾 螃蟹合甲 連 童子拜佛</p>
-<p class="mp_main">進 蝴蝶對飛 退 狸貓捕鼠</p>
-<p class="mp_main">踏 石柱觸地 掛 鈍鐮割穀</p>
+<h1 class="mp_title" u00024commentu0005bu00027idu00027u0005d="" id="calibre_toc_40">二十四气</h1>
+<p class="mp_main">二十四气为一周年，每年有十二个月，每月有两节，每节与每节的气候之不同，即合与拳之二十四势，有二十四种不同之气。</p>
+<p class="mp_main">阳 猿猴献桃 阴 犀牛望月</p>
+<p class="mp_main">承 双虹驾彩 停 仙人捧盘</p>
+<p class="mp_main">擎 白鹤亮翅 沉 双龙入洞</p>
+<p class="mp_main">开 提戟搜山 入 巨蟒入穴</p>
+<p class="mp_main">创 猛虎翻身 劈 悬崖擂鼓</p>
+<p class="mp_main">牵 千金坠石 推 双手推山</p>
+<p class="mp_main">敌 真符送书 吃 猛虎探爪</p>
+<p class="mp_main">粘 片胶入麻 随 流星赶月</p>
+<p class="mp_main">闪 白虎靠山 惊 飞燕投林</p>
+<p class="mp_main">勾 螃蟹合甲 连 童子拜佛</p>
+<p class="mp_main">进 蝴蝶对飞 退 狸猫捕鼠</p>
+<p class="mp_main">踏 石柱触地 挂 钝镰割谷</p>
 <p class="mp_separator"></p>
-<p class="mp_comment">︻評注：此24 氣各有不同的意境。梅花樁練功與技擊都要進入一定的意境，要求一定的心態。如練架子時要求無思無住，一切皆空，把自己與天地溶為一體，對周圍的一切視而不見，聽而不聞。又如上戳天下拄地，上摘星下伏虎，兩臂前後成一直線，伸向前後極遠之處，上劐下挑於天地之間劃一條鴻溝，等等。梅花樁與敵交手之時心中無我無他，如入無人之境。俗語常說：練時無人似有人，用時有人似無人，這都是對意境、心態的要求。文中二十四氣的各個意境，練者應悉心體驗領悟，必有所得。︼</p>
+<p class="mp_comment">︻评注：此24 气各有不同的意境。梅花桩练功与技击都要进入一定的意境，要求一定的心态。如练架子时要求无思无住，一切皆空，把自己与天地溶为一体，对周围的一切视而不见，听而不闻。又如上戳天下拄地，上摘星下伏虎，两臂前后成一直线，伸向前后极远之处，上劐下挑于天地之间划一条鸿沟，等等。梅花桩与敌交手之时心中无我无他，如入无人之境。俗语常说：练时无人似有人，用时有人似无人，这都是对意境、心态的要求。文中二十四气的各个意境，练者应悉心体验领悟，必有所得。︼</p>
 <p id="calibre_pb_33" class="mp_end"></p>
 </body>
 </html>
