--- a/epub_source/OEBPS/Text/index_split_034.html
+++ b/epub_source/OEBPS/Text/index_split_034.html
@@ -10,10 +10,10 @@
  
 </head>
   <body class="mp_body">
-<h1 class="mp_title" u00024commentu0005bu00027idu00027u0005d="" id="calibre_toc_41">易筋經說</h1>
-<p class="mp_main">夫人之一身，內而五臟六腑，外而四肢百骸，內而精氣神，外而筋骨肉，共成其一身也。如臟腑之外，筋骨主之。筋骨之外，肌肉主之。肌肉之內，血脈主之。周身上下動搖活潑者，此又主之於氣。是故習練之功，全在易筋培養氣血為要。欲求易筋之道，須求新陳代謝，欲求新陳代謝，在於汗液，汗液不出，肌肉筋骨氣血，都不起變化。是故要出汗，初行功始見汗，是為微汗，微汗後當加功倍練，要出大汗，是為大汗，大汗後有汗，是為微汗，經過三層出汗水，全身氣血大變矣。初期三年為小期，十年為大期，小期能易筋肉，大期能易氣血。待到二期三期，定達上乘矣。練到骨節通靈處，周身龍虎任意行。﹁ 龍者為氣，虎者為血。氣使血行，周身貫通，所謂渾元一氣。﹂</p>
+<h1 class="mp_title" u00024commentu0005bu00027idu00027u0005d="" id="calibre_toc_41">易筋经说</h1>
+<p class="mp_main">夫人之一身，内而五脏六腑，外而四肢百骸，内而精气神，外而筋骨肉，共成其一身也。如脏腑之外，筋骨主之。筋骨之外，肌肉主之。肌肉之内，血脉主之。周身上下动摇活泼者，此又主之于气。是故习练之功，全在易筋培养气血为要。欲求易筋之道，须求新陈代谢，欲求新陈代谢，在于汗液，汗液不出，肌肉筋骨气血，都不起变化。是故要出汗，初行功始见汗，是为微汗，微汗后当加功倍练，要出大汗，是为大汗，大汗后有汗，是为微汗，经过三层出汗水，全身气血大变矣。初期三年为小期，十年为大期，小期能易筋肉，大期能易气血。待到二期三期，定达上乘矣。练到骨节通灵处，周身龙虎任意行。﹁ 龙者为气，虎者为血。气使血行，周身贯通，所谓浑元一气。﹂</p>
 <p class="mp_separator"></p>
-<p class="mp_comment">︻評注：此為通過武功鍛煉，改變練功者筋肉及氣血的學說，梅花樁武功是內外兼練的，武功練成後練功者的筋肉、氣血都要得到徹底改造。︼</p>
+<p class="mp_comment">︻评注：此为通过武功锻炼，改变练功者筋肉及气血的学说，梅花桩武功是内外兼练的，武功练成后练功者的筋肉、气血都要得到彻底改造。︼</p>
 <p id="calibre_pb_34" class="mp_end"></p>
 </body>
 </html>
