--- a/epub_source/OEBPS/Text/index_split_036.html
+++ b/epub_source/OEBPS/Text/index_split_036.html
@@ -10,13 +10,13 @@
  
 </head>
   <body class="mp_body">
-<p class="mp_main">五勢梅花樁為昆侖派，五勢梅花拳是一種，八卦是一種，此兩種拳為昆侖派之基本拳。昆侖派之祖師化名雲磐，在西域天磐雲程孝縣，清靜宮玄金殿，在昆侖山，所以有昆侖派之稱。五勢梅花拳為僧門道派，又名父子拳，一名長拳，在家為僧門，出外為道派。此為僧門道派五勢梅花拳，共為一路，內包括四門五勢八方，四門八方為行步，五勢為樁步。</p>
-<p class="mp_main">行步有三法，一擺法，二撤法，三紮法。樁步為五勢：一大勢、二順勢、三拗勢、四小勢、五敗勢。按圖中方向去練習，圖分八方，為乾坎艮震巽離坤兌是也。坎離相對，坤艮相對，兌震相對，乾巽相對，是二人相對也。甲在坎北，乙在離南，相對而練也。周而複始為一趟，樁步為靜，行步為動，此為初學習之門路，俗名盤趟子。樁步練全身之力，行步練兩腳之快也。練習時有甲乙二人，互相旋轉對練者，有四人對練者，有八人對練者，此為練法也。梅花拳有三成，上成、中成、下成，下成為身化，為初步練習，中成為氣化，上成為神化，此為三個階段也。第一個階段是練手眼身法步一身之法也。第二步為成拳，是練習應用之手法也，互相對打有一定之手。第三步為擰拳，有了勝敗此為贏拳。</p>
+<p class="mp_main">五势梅花桩为昆仑派，五势梅花拳是一种，八卦是一种，此两种拳为昆仑派之基本拳。昆仑派之祖师化名云磐，在西域天磐云程孝县，清静宫玄金殿，在昆仑山，所以有昆仑派之称。五势梅花拳为僧门道派，又名父子拳，一名长拳，在家为僧门，出外为道派。此为僧门道派五势梅花拳，共为一路，内包括四门五势八方，四门八方为行步，五势为桩步。</p>
+<p class="mp_main">行步有三法，一摆法，二撤法，三扎法。桩步为五势：一大势、二顺势、三拗势、四小势、五败势。按图中方向去练习，图分八方，为干坎艮震巽离坤兑是也。坎离相对，坤艮相对，兑震相对，干巽相对，是二人相对也。甲在坎北，乙在离南，相对而练也。周而复始为一趟，桩步为静，行步为动，此为初学习之门路，俗名盘趟子。桩步练全身之力，行步练两脚之快也。练习时有甲乙二人，互相旋转对练者，有四人对练者，有八人对练者，此为练法也。梅花拳有三成，上成、中成、下成，下成为身化，为初步练习，中成为气化，上成为神化，此为三个阶段也。第一个阶段是练手眼身法步一身之法也。第二步为成拳，是练习应用之手法也，互相对打有一定之手。第三步为拧拳，有了胜败此为赢拳。</p>
 <p class="mp_separator"></p>
 
 
-	<h1 class="mp_title" u00024commentu0005bu00027idu00027u0005d="" id="calibre_toc_47">校勘記</h1>
-<p class="mp_main">︽梅花拳秘譜︾是山東大學幾位十八代梅花拳弟子根據北京大學1963 年11 月的油印本抄錄的。該油印本是根據韓其昌老師所收藏的︽梅花拳秘譜︾手抄本刻印的。原手抄本用毛筆直行楷書抄寫，無標點符號。此原件在﹁ 十年文革動亂﹂ 中遺失。現僅留油印本一份，該件由於刻印技術不佳，個別文字重疊、模糊無法複原，請讀者注意。燕子傑始校1990年4月16日，1992年5月2日校完，並稍作批注。</p>
+	<h1 class="mp_title" u00024commentu0005bu00027idu00027u0005d="" id="calibre_toc_47">校勘记</h1>
+<p class="mp_main">︽梅花拳秘谱︾是山东大学几位十八代梅花拳弟子根据北京大学1963 年11 月的油印本抄录的。该油印本是根据韩其昌老师所收藏的︽梅花拳秘谱︾手抄本刻印的。原手抄本用毛笔直行楷书抄写，无标点符号。此原件在﹁ 十年文革动乱﹂ 中遗失。现仅留油印本一份，该件由于刻印技术不佳，个别文字重叠、模糊无法复原，请读者注意。燕子杰始校1990年4月16日，1992年5月2日校完，并稍作批注。</p>
 <p id="calibre_pb_36" class="mp_end"></p>
 </body>
 </html>
