--- a/epub_source/OEBPS/Text/index_split_037.html
+++ b/epub_source/OEBPS/Text/index_split_037.html
@@ -10,35 +10,35 @@
  
 </head>
   <body class="mp_body">
-    <h1 class="mp_title" id="calibre_toc_48">習武序︵ 考訂本︶</h1>
-<p class="mp_main">楊炳 著</p>
-<p class="mp_main">楊彥明 考訂</p>
-<p class="mp_main">有謂至治之世而武可以不練，此言之者迂也。蓋武可以百年不用，不可一日不備。自古聖帝明王莫不隆文重武，公卿大夫率皆出將入相。無如時至近今，每多庸儒俗子，互相譏笑，文而弗武者有之，武而弗文者有之。此無他，皆所以自待者薄而期許者淺也。故孟子曰：待文王而後興者，凡民也。若夫豪傑之士，雖無文王猶興。</p>
-<p class="mp_main">炳幸中探花，愧無全才之足錄，幸有寸長之堪信。每遇親友，屢請教授，恐為人之所患。若欲隱密，懼負師之所傳。無可奈何，須俟尚志好學之士，將管窺微技細細詳說。倘學者誠心習之，寶珍愛之，如君子深造之以道，焉知無左右逢源之樂，七日不食彈琴詠歌之趣乎！時而窮也，可以保身保家；時而達也，可以衛君衛國。治四海如盤石之安，登萬民於仁壽之域，詎曰小補之哉！</p>
-<p class="mp_main">時 乾隆七年歲次壬戌春二月朔一日</p>
-<p class="mp_main">原任禦前侍衛壬辰科探花及第楊 炳虎文甫編著</p>
-<p class="mp_main">儒學生員王 端方儒校閱</p>
-<p class="mp_main">校字 受業門人嶽金梁擎天 武登科鎮遠</p>
-<p class="mp_main">表侄周名久健庵 男兆熊夢葉</p>
-<p class="mp_main">立教條目：</p>
-<p class="mp_main">拳堂中間立</p>
-<p class="mp_main">天地君親師 神位</p>
-<p class="mp_main">左書：振三綱須賴真武︵ 論綱常要恃文友講︶</p>
-<p class="mp_main">右書：整五常全憑大文︵ 定太平還讓武將能︶</p>
-<p class="mp_main">上書：一貫之道</p>
-<p class="mp_main">設爐次第：上三爐，左一爐，右一爐</p>
-<p class="mp_main">上香定則：五爐上香不必拘定。一握十數柱，上三爐或一握六柱，東爐三柱，西爐五柱。亦可為其貧富不等，只要誠敬為主，且簡可行。</p>
-<p class="mp_main">拜祖師儀注：</p>
-<p class="mp_main">每逢朔望日期，定行三跪九叩首之禮。平常日期，只行一跪三叩首之禮，亦只要誠敬為主。</p>
-<p class="mp_main">拳堂中徒拜師儀注：</p>
-<p class="mp_main">拜師時只可先一揖，次叩首二個再一揖。若在別處見師，只用一揖。若久久不見，即叩首亦無不可。</p>
-<p class="mp_main">曆代相傳武祖要言，如文子敬孔子，使人有遇廟生肅、過墓生哀之意。真性本於天生，教道成於師傳。</p>
+    <h1 class="mp_title" id="calibre_toc_48">习武序︵ 考订本︶</h1>
+<p class="mp_main">杨炳 著</p>
+<p class="mp_main">杨彦明 考订</p>
+<p class="mp_main">有谓至治之世而武可以不练，此言之者迂也。盖武可以百年不用，不可一日不备。自古圣帝明王莫不隆文重武，公卿大夫率皆出将入相。无如时至近今，每多庸儒俗子，互相讥笑，文而弗武者有之，武而弗文者有之。此无他，皆所以自待者薄而期许者浅也。故孟子曰：待文王而后兴者，凡民也。若夫豪杰之士，虽无文王犹兴。</p>
+<p class="mp_main">炳幸中探花，愧无全才之足录，幸有寸长之堪信。每遇亲友，屡请教授，恐为人之所患。若欲隐密，惧负师之所传。无可奈何，须俟尚志好学之士，将管窥微技细细详说。倘学者诚心习之，宝珍爱之，如君子深造之以道，焉知无左右逢源之乐，七日不食弹琴咏歌之趣乎！时而穷也，可以保身保家；时而达也，可以卫君卫国。治四海如盘石之安，登万民于仁寿之域，讵曰小补之哉！</p>
+<p class="mp_main">时 乾隆七年岁次壬戌春二月朔一日</p>
+<p class="mp_main">原任御前侍卫壬辰科探花及第杨 炳虎文甫编著</p>
+<p class="mp_main">儒学生员王 端方儒校阅</p>
+<p class="mp_main">校字 受业门人岳金梁擎天 武登科镇远</p>
+<p class="mp_main">表侄周名久健庵 男兆熊梦叶</p>
+<p class="mp_main">立教条目：</p>
+<p class="mp_main">拳堂中间立</p>
+<p class="mp_main">天地君亲师 神位</p>
+<p class="mp_main">左书：振三纲须赖真武︵ 论纲常要恃文友讲︶</p>
+<p class="mp_main">右书：整五常全凭大文︵ 定太平还让武将能︶</p>
+<p class="mp_main">上书：一贯之道</p>
+<p class="mp_main">设炉次第：上三炉，左一炉，右一炉</p>
+<p class="mp_main">上香定则：五炉上香不必拘定。一握十数柱，上三炉或一握六柱，东炉三柱，西炉五柱。亦可为其贫富不等，只要诚敬为主，且简可行。</p>
+<p class="mp_main">拜祖师仪注：</p>
+<p class="mp_main">每逢朔望日期，定行三跪九叩首之礼。平常日期，只行一跪三叩首之礼，亦只要诚敬为主。</p>
+<p class="mp_main">拳堂中徒拜师仪注：</p>
+<p class="mp_main">拜师时只可先一揖，次叩首二个再一揖。若在别处见师，只用一揖。若久久不见，即叩首亦无不可。</p>
+<p class="mp_main">历代相传武祖要言，如文子敬孔子，使人有遇庙生肃、过墓生哀之意。真性本于天生，教道成于师传。</p>
 <p class="mp_main">上拜收元老祖</p>
-<p class="mp_main">注解：收元老祖即天地也。言一元之氣，化生萬物，成始成終，故為收元老祖。</p>
+<p class="mp_main">注解：收元老祖即天地也。言一元之气，化生万物，成始成终，故为收元老祖。</p>
 <p class="mp_main">次拜均天教主</p>
-<p class="mp_main">注解：均天教主即帝王也。言一人立極，居中治外，六合一家，故為均天教主。</p>
-<p class="mp_main">終拜東都護法</p>
-<p class="mp_main">注解：東都護法即親師也。言一生氣肇東，生我成我，恪遵王法，故曰東都護法。不可退前落後，切忌忘師背祖。然後再一願，不可犯上作亂，連累父兄。如孔子曰：如所否者，天厭之，天厭之。師立於左右邊，學徒望上叩首，如前著的拜法。</p>
+<p class="mp_main">注解：均天教主即帝王也。言一人立极，居中治外，六合一家，故为均天教主。</p>
+<p class="mp_main">终拜东都护法</p>
+<p class="mp_main">注解：东都护法即亲师也。言一生气肇东，生我成我，恪遵王法，故曰东都护法。不可退前落后，切忌忘师背祖。然后再一愿，不可犯上作乱，连累父兄。如孔子曰：如所否者，天厌之，天厌之。师立于左右边，学徒望上叩首，如前著的拜法。</p>
 <p class="mp_end" id="calibre_pb_37"></p>
 </body>
 </html>
