--- a/epub_source/OEBPS/Text/index_split_038.html
+++ b/epub_source/OEBPS/Text/index_split_038.html
@@ -10,19 +10,19 @@
  
 </head>
   <body class="mp_body">
-<h1 class="mp_title" u00024commentu0005bu00027idu00027u0005d="" id="calibre_toc_49">習武規矩十二條</h1>
-<p class="mp_main">第一條：凡立教之始，務要他知孝悌忠信禮義廉恥之道，異日可以入則事其父兄，出則事其長上，不愧有勇知方之士。</p>
-<p class="mp_main">第二條：凡入教之時，務要他知身體發膚受之父母，不敢毀傷。講習武藝，所以保身體。好勇鬥狠，所以危父母。切宜熟記。</p>
-<p class="mp_main">第三條：凡習武務要使他知拳腳為槍棍之母。不活拳腳，則槍棍不獲臻其妙。徒尚拳腳，則遇敵不克取其勝。二者兼之，方得其趣。</p>
-<p class="mp_main">第四條：凡學技之士，務要知安詳恭敬。雖曰手舞足蹈，似與文人不同，而其神化莫測，非粗心浮氣者所能入也。昔宋將嶽武穆上馬如無敵天神，下馬如有道賢人。</p>
-<p class="mp_main">第五條：凡入拳堂時，務要沉細，不可喧嘩，方可知進退之中有妙著，趨避之內有利害。萬不可視拳腳如戲場，則學習才有進益。</p>
-<p class="mp_main">第六條：凡出拳堂時，務要如見大敵，不可輕忽。當思何法可以破他，何著得以勝他，久久習之，可以登堂入室。</p>
-<p class="mp_main">第七條：凡見師面，即便站起，不可視若路人。每見庸師俗弟之輩，並肩而行，同凳而坐，全無師弟之分，絕無尊敬之意。一則師藝淺，一則弟心傲，所以徒有習武之名而全無真藝之用也。</p>
-<p class="mp_main">第八條：凡師弟授受之際，弟子卻不聽。俗人曰：不打師傅不得妙著。每有乘師無備，偷刺暗打，是最輕狂可惡。竊思奇著妙法，孰有圮上老人必待子房三進禮而後授。蓋奇著妙法，何師無之，皆因弟子輕薄不知尊師重道，不可大受，故秘而弗傳。況奇著妙法，俱是殺敵之毒手段，倘若輕施，弟必受傷，定要緩緩傳授，慢慢講說，始堪有得。自古學武難，傳武更難，因材而教，文武皆然，豈可躐等也哉！</p>
-<p class="mp_main">第九條：凡教習武之士，當尊孔子有教無類。不然，仲弓不得列德行之科，互鄉鮮克有見聖之童。務使其改過自新，正見人才難得故耳。</p>
-<p class="mp_main">第十條：凡傳教之師，斷不可重利輕藝。苟授匪人，敗名喪德，明有王法，暗有神鬼，可輕泄哉！孔子曰：我待價者也。價非千兩銀萬兩金，是待有尊德之君、重道之主。卑禮厚聘，方可出而仕也，如千銀萬金視若涕唾，豈足以動至聖之心哉？教者當如是耳。</p>
-<p class="mp_main">第十一條：凡入教習武之士，諒其身之強弱、人之雅俗，如講道書生只可緩授其進退之法、閃搕之術，步騎身勢而已，斷不宜拳打腳踢，與門渾者一樣看也。</p>
-<p class="mp_main">第十二條：凡拜師，於每月朔望日期，只行二拜禮，不必同君親之禮。何也，禮有隆殺，過猶不及，方免足恭之譏。切記，切記。</p>
+<h1 class="mp_title" u00024commentu0005bu00027idu00027u0005d="" id="calibre_toc_49">习武规矩十二条</h1>
+<p class="mp_main">第一条：凡立教之始，务要他知孝悌忠信礼义廉耻之道，异日可以入则事其父兄，出则事其长上，不愧有勇知方之士。</p>
+<p class="mp_main">第二条：凡入教之时，务要他知身体发肤受之父母，不敢毁伤。讲习武艺，所以保身体。好勇斗狠，所以危父母。切宜熟记。</p>
+<p class="mp_main">第三条：凡习武务要使他知拳脚为枪棍之母。不活拳脚，则枪棍不获臻其妙。徒尚拳脚，则遇敌不克取其胜。二者兼之，方得其趣。</p>
+<p class="mp_main">第四条：凡学技之士，务要知安详恭敬。虽曰手舞足蹈，似与文人不同，而其神化莫测，非粗心浮气者所能入也。昔宋将岳武穆上马如无敌天神，下马如有道贤人。</p>
+<p class="mp_main">第五条：凡入拳堂时，务要沉细，不可喧哗，方可知进退之中有妙著，趋避之内有利害。万不可视拳脚如戏场，则学习才有进益。</p>
+<p class="mp_main">第六条：凡出拳堂时，务要如见大敌，不可轻忽。当思何法可以破他，何著得以胜他，久久习之，可以登堂入室。</p>
+<p class="mp_main">第七条：凡见师面，即便站起，不可视若路人。每见庸师俗弟之辈，并肩而行，同凳而坐，全无师弟之分，绝无尊敬之意。一则师艺浅，一则弟心傲，所以徒有习武之名而全无真艺之用也。</p>
+<p class="mp_main">第八条：凡师弟授受之际，弟子却不听。俗人曰：不打师傅不得妙著。每有乘师无备，偷刺暗打，是最轻狂可恶。窃思奇著妙法，孰有圮上老人必待子房三进礼而后授。盖奇著妙法，何师无之，皆因弟子轻薄不知尊师重道，不可大受，故秘而弗传。况奇著妙法，俱是杀敌之毒手段，倘若轻施，弟必受伤，定要缓缓传授，慢慢讲说，始堪有得。自古学武难，传武更难，因材而教，文武皆然，岂可躐等也哉！</p>
+<p class="mp_main">第九条：凡教习武之士，当尊孔子有教无类。不然，仲弓不得列德行之科，互乡鲜克有见圣之童。务使其改过自新，正见人才难得故耳。</p>
+<p class="mp_main">第十条：凡传教之师，断不可重利轻艺。苟授匪人，败名丧德，明有王法，暗有神鬼，可轻泄哉！孔子曰：我待价者也。价非千两银万两金，是待有尊德之君、重道之主。卑礼厚聘，方可出而仕也，如千银万金视若涕唾，岂足以动至圣之心哉？教者当如是耳。</p>
+<p class="mp_main">第十一条：凡入教习武之士，谅其身之强弱、人之雅俗，如讲道书生只可缓授其进退之法、闪搕之术，步骑身势而已，断不宜拳打脚踢，与门浑者一样看也。</p>
+<p class="mp_main">第十二条：凡拜师，于每月朔望日期，只行二拜礼，不必同君亲之礼。何也，礼有隆杀，过犹不及，方免足恭之讥。切记，切记。</p>
 <p id="calibre_pb_38" class="mp_end"></p>
 </body>
 </html>
