--- a/epub_source/OEBPS/Text/index_split_039.html
+++ b/epub_source/OEBPS/Text/index_split_039.html
@@ -10,20 +10,20 @@
  
 </head>
   <body class="mp_body">
-<h1 class="mp_title" u00024commentu0005bu00027idu00027u0005d="" id="calibre_toc_50">問答篇</h1>
-<p class="mp_main">或問</p>
-<p class="mp_main">武教條約立於前，固可取信於眾。若不再設或問數條，恐心有種疑，習武不專。故再立或問之說，使人深服於心，而後武可成。</p>
-<p class="mp_main">或問曰：叟年已七旬有一，正靜養時也，猶斤斤以武藝為念，常常講說，毋乃非自重之道、延年益壽之方乎？</p>
-<p class="mp_main">答曰：貧當益堅，老當益壯。竊思由泮水以登鷹揚，由鷹揚以升會武曆至殿試。聖祖仁皇帝特授探花二等侍衛，恩至重也。屢蒙皇賞，情至厚也。每與同朝比武較藝，僥幸俱捷，名至美也。年雖老邁，猶欲得好學尚志之士，誠心習之，庶宿學之，片長可繼後生之玉成有期，予豈好勞哉，予不得已也。</p>
-<p class="mp_main">或問曰：將者操旗鼓耳，一劍之力，非將任也，奚用技為？</p>
-<p class="mp_main">答曰：否，否，不然。蓋為將者身先士卒。若無技藝，士卒之勇怯不得知，行伍之整亂不得明，賞罰之厚薄不得平。況處玉石不分之際，敵惟恐不獲將領為首功，武藝重乎不重乎。</p>
-<p class="mp_main">或問曰：武藝者，兵丁之所先，士民之所緩，似為不急之務。</p>
-<p class="mp_main">答曰：否，否，不然。蓋丈夫生而志在四方。士居四民之首，自古士子出門，每攜琴劍書箱。夫琴者禁也，禁止邪妄，而歸中正，為調養性情之具。至於劍，詎能使賊一見而即避，能於百步之外取人首者乎。今之腐儒每笑武為魯夫，宜為之鄧弼肆酒而怒詫者乎。推之農工商賈，在所宜習，概可知矣。</p>
-<p class="mp_main">或問曰：何謂把勢？何謂學活？</p>
-<p class="mp_main">答曰：把者，握也，操也；勢者，因利而制權，以靜而待動，如轉圓石於千仞之山，一發而人無補救之術，此之謂也。學之為言效也。活者，不拘上下左右前後，顧之嚴備之密，不露破綻。設若二人比武，數人較技，要看他力從何處來，待他舊力略過新力未來而乘之，則無不勝也。或用肘靠之法，先用虛著哄他進來，我之槍棍侵入他二三尺急力拍開，務要以響為度。經曰：一聲響處值千金，彼失提防我便贏，至精至妙之訣也。</p>
-<p class="mp_main">或問曰：武者粗跡也，文者細事也。子言一貫，予惑滋甚。</p>
-<p class="mp_main">答曰：坐，吾明語子。聖人之心譬如明鏡止水，無徹不照。事來隨應，不先事而為之備，不後事而為之留，深合時措之宜，切契內外之道，如天之無不覆，如地之無不載。易曰：其惟聖人乎！知進退存亡而不失其正者，其惟聖人乎！孔子曰：我戰則克。夫克者無他術，唯以靜待動也，以逸待勞也，以主待客也。靜待之義即君子之道費而隱也。其大無外，其小無內，可謂費矣。然其理之所以然，則隱而不可見也。魯論曰：小不忍則亂大謀。蘇子曰：一忍可以支百勇，一靜可以致百動。聖經曰：定靜安慮。魯論曰：臨事而懼，好謀而成，子之所慎齊戰疾，善人教民七年亦可即戎矣。自古名將之統眾兵，臨大敵不動如山嶽，難測如陰陽，靜如處女，動若雷電。武經曰：致人而不致於人，卑而驕之，逸而勞之，作之而知動靜之理，角之而知有餘不足之處。用而示之不用，不用而示之用，神而明之，化而裁之，運用之妙存乎一心。總不外乎主敬之心、格物之學，故曰：一貫之道。</p>
-<p class="mp_main">豈予無根之談，而詐妄欺人也哉！</p>
+<h1 class="mp_title" u00024commentu0005bu00027idu00027u0005d="" id="calibre_toc_50">问答篇</h1>
+<p class="mp_main">或问</p>
+<p class="mp_main">武教条约立于前，固可取信于众。若不再设或问数条，恐心有种疑，习武不专。故再立或问之说，使人深服于心，而后武可成。</p>
+<p class="mp_main">或问曰：叟年已七旬有一，正静养时也，犹斤斤以武艺为念，常常讲说，毋乃非自重之道、延年益寿之方乎？</p>
+<p class="mp_main">答曰：贫当益坚，老当益壮。窃思由泮水以登鹰扬，由鹰扬以升会武历至殿试。圣祖仁皇帝特授探花二等侍卫，恩至重也。屡蒙皇赏，情至厚也。每与同朝比武较艺，侥幸俱捷，名至美也。年虽老迈，犹欲得好学尚志之士，诚心习之，庶宿学之，片长可继后生之玉成有期，予岂好劳哉，予不得已也。</p>
+<p class="mp_main">或问曰：将者操旗鼓耳，一剑之力，非将任也，奚用技为？</p>
+<p class="mp_main">答曰：否，否，不然。盖为将者身先士卒。若无技艺，士卒之勇怯不得知，行伍之整乱不得明，赏罚之厚薄不得平。况处玉石不分之际，敌惟恐不获将领为首功，武艺重乎不重乎。</p>
+<p class="mp_main">或问曰：武艺者，兵丁之所先，士民之所缓，似为不急之务。</p>
+<p class="mp_main">答曰：否，否，不然。盖丈夫生而志在四方。士居四民之首，自古士子出门，每携琴剑书箱。夫琴者禁也，禁止邪妄，而归中正，为调养性情之具。至于剑，讵能使贼一见而即避，能于百步之外取人首者乎。今之腐儒每笑武为鲁夫，宜为之邓弼肆酒而怒诧者乎。推之农工商贾，在所宜习，概可知矣。</p>
+<p class="mp_main">或问曰：何谓把势？何谓学活？</p>
+<p class="mp_main">答曰：把者，握也，操也；势者，因利而制权，以静而待动，如转圆石于千仞之山，一发而人无补救之术，此之谓也。学之为言效也。活者，不拘上下左右前后，顾之严备之密，不露破绽。设若二人比武，数人较技，要看他力从何处来，待他旧力略过新力未来而乘之，则无不胜也。或用肘靠之法，先用虚著哄他进来，我之枪棍侵入他二三尺急力拍开，务要以响为度。经曰：一声响处值千金，彼失提防我便赢，至精至妙之诀也。</p>
+<p class="mp_main">或问曰：武者粗迹也，文者细事也。子言一贯，予惑滋甚。</p>
+<p class="mp_main">答曰：坐，吾明语子。圣人之心譬如明镜止水，无彻不照。事来随应，不先事而为之备，不后事而为之留，深合时措之宜，切契内外之道，如天之无不覆，如地之无不载。易曰：其惟圣人乎！知进退存亡而不失其正者，其惟圣人乎！孔子曰：我战则克。夫克者无他术，唯以静待动也，以逸待劳也，以主待客也。静待之义即君子之道费而隐也。其大无外，其小无内，可谓费矣。然其理之所以然，则隐而不可见也。鲁论曰：小不忍则乱大谋。苏子曰：一忍可以支百勇，一静可以致百动。圣经曰：定静安虑。鲁论曰：临事而惧，好谋而成，子之所慎齐战疾，善人教民七年亦可即戎矣。自古名将之统众兵，临大敌不动如山岳，难测如阴阳，静如处女，动若雷电。武经曰：致人而不致于人，卑而骄之，逸而劳之，作之而知动静之理，角之而知有余不足之处。用而示之不用，不用而示之用，神而明之，化而裁之，运用之妙存乎一心。总不外乎主敬之心、格物之学，故曰：一贯之道。</p>
+<p class="mp_main">岂予无根之谈，而诈妄欺人也哉！</p>
 <p id="calibre_pb_39" class="mp_end"></p>
 </body>
 </html>
