--- a/epub_source/OEBPS/Text/index_split_042.html
+++ b/epub_source/OEBPS/Text/index_split_042.html
@@ -10,18 +10,18 @@
  
 </head>
   <body class="mp_body">
-<p class="mp_main">古海陵邑癢生孫文宣敬尼題</p>
-<p class="mp_main">又贊曰：</p>
-<p class="mp_main">十載寒窗苦用心，得會皇榜第三人；</p>
-<p class="mp_main">名滿天下鹹欽仰，丹心報國扶明君。</p>
-<p class="mp_main">大鵬初展垂天翅，金線釣出虎狼群；</p>
-<p class="mp_main">正當統軍為元帥，忽動終養一片心。</p>
-<p class="mp_main">致仕孝親為處士，願效伊尹耕有莘。</p>
-<p class="mp_main">又贊曰：</p>
-<p class="mp_main">先生武藝比人強，文章超群不尋常；</p>
-<p class="mp_main">曾中壬辰探花客，名傳九州達四方。</p>
-<p class="mp_main">禦前侍衛宮爵貴，有福有壽子孫昌；</p>
-<p class="mp_main">奉旨回籍行孝道，忠孝兩全姓名揚。</p>
+<p class="mp_main">古海陵邑痒生孙文宣敬尼题</p>
+<p class="mp_main">又赞曰：</p>
+<p class="mp_main">十载寒窗苦用心，得会皇榜第三人；</p>
+<p class="mp_main">名满天下咸钦仰，丹心报国扶明君。</p>
+<p class="mp_main">大鹏初展垂天翅，金线钓出虎狼群；</p>
+<p class="mp_main">正当统军为元帅，忽动终养一片心。</p>
+<p class="mp_main">致仕孝亲为处士，愿效伊尹耕有莘。</p>
+<p class="mp_main">又赞曰：</p>
+<p class="mp_main">先生武艺比人强，文章超群不寻常；</p>
+<p class="mp_main">曾中壬辰探花客，名传九州达四方。</p>
+<p class="mp_main">御前侍卫宫爵贵，有福有寿子孙昌；</p>
+<p class="mp_main">奉旨回籍行孝道，忠孝两全姓名扬。</p>
 <p class="mp_end" id="calibre_pb_42"></p>
 </body>
 </html>
