--- a/epub_source/OEBPS/Text/index_split_043.html
+++ b/epub_source/OEBPS/Text/index_split_043.html
@@ -10,16 +10,16 @@
  
 </head>
   <body class="mp_body">
-<h1 class="mp_title" u00024commentu0005bu00027idu00027u0005d="" id="calibre_toc_52">梅花拳一百輩字譜排列順序</h1>
-<p class="mp_main">道德通玄靜，真常守太清，</p>
-<p class="mp_main">一陽來複本，合教永圓明，</p>
-<p class="mp_main">至理宗誠信，崇高嗣法興，</p>
-<p class="mp_main">世景榮維懋，希微衍自寧，</p>
-<p class="mp_main">未修正仁義，超升雲會登，</p>
-<p class="mp_main">大妙中黃貴，聖體全用功，</p>
-<p class="mp_main">虛空乾坤秀，金木性相逢，</p>
-<p class="mp_main">山海龍虎交，蓮開現寳心，</p>
-<p class="mp_main">行滿丹書詔，月盈祥光生，</p>
-<p class="mp_main">萬古續仙號，三界都是親。</p>
+<h1 class="mp_title" u00024commentu0005bu00027idu00027u0005d="" id="calibre_toc_52">梅花拳一百辈字谱排列顺序</h1>
+<p class="mp_main">道德通玄静，真常守太清，</p>
+<p class="mp_main">一阳来复本，合教永圆明，</p>
+<p class="mp_main">至理宗诚信，崇高嗣法兴，</p>
+<p class="mp_main">世景荣维懋，希微衍自宁，</p>
+<p class="mp_main">未修正仁义，超升云会登，</p>
+<p class="mp_main">大妙中黄贵，圣体全用功，</p>
+<p class="mp_main">虚空乾坤秀，金木性相逢，</p>
+<p class="mp_main">山海龙虎交，莲开现寳心，</p>
+<p class="mp_main">行满丹书诏，月盈祥光生，</p>
+<p class="mp_main">万古续仙号，三界都是亲。</p>
 </body>
 </html>
