--- a/epub_source/OEBPS/Text/index_split_002.html
+++ b/epub_source/OEBPS/Text/index_split_002.html
@@ -10,18 +10,18 @@
  
 </head>
   <body class="mp_body">
-<h1 class="mp_title" u00024commentu0005bu00027idu00027u0005d="" id="calibre_toc_3">梅拳概論</h1>
-<p class="mp_main">夫我國拳術派別之眾百有餘門矣，但溯其源泉則一也。蓋學拳者側重於身體之一部，而展其所長，另創一家，於是門派生焉。迄今尤能保持原有狀態者，僅梅拳耳。梅拳之始因年代之久遠而不可知，傳石漢時已有之，至今已有百廿餘世矣。其內容基本則五勢四門架子八方成拳擰拳梅花樁等。五勢為大順拗小敗五勢是也。勢如梅樹之花葉也，而架子如樹之根幹河之源泉，惟其變化又為其特長矣，茲分志之。</p>
-<p class="mp_comment">︻以下為架子中行步與樁步的主要練法︼</p>
-<p class="mp_main">架子四門此拳路也，均為四平大架子，包含四門五勢八方等，亦是學者必由之路，通俗所謂盤架子是也。四門為練步之法，內含擠箭躐跳躍等，步熟之後，可任意橫走豎撞，拗步斜身，亦可曰走如風，站如釘，仰之則高，俯之則深，進之則長、退之則促，隨東就西、聲左則右，知己知彼則百戰百勝，使敵者如墜入五裏霧中而不能辨其方向矣。</p>
-<p class="mp_main">五勢之變化則本陰陽之理，太極之功，動之則分，靜之則合；無過不及，隨曲就伸，蓄勁如開弓，發勁似射箭。知寬知窄，隨高就低，一氣貫穿，剛柔相濟，步隨身換，氣隨意發。靜之如山嶽，按之有陰陽，無窮如天地，充實如太倉，一動似江河，行之似波浪，浩渺如江海，圓耀如三光。</p>
-<p class="mp_comment">︻在架子中行步可練步法之輕靈、動作之迅疾。而樁步則練全身之氣血、養精氣神之合一。此段，文字寓意極深，應熟記之。︼</p>
-<p class="mp_main">大勢屬金，須涵胸拔背，氣斂丹田，靜以觀動，借勁使勁，或曰順人之力借人之勢也。順勢屬水，其變化歌曰：順勢展開一條線，四路來人能改變，手眼身法步等。拗勢屬木，靜勢則斜身拗步，動作橫走豎撞，迎風掌、斜身截步等又為此勢中之得意手也。小勢屬火，站開其穩如釘，其變化尤多矣，刁拿鎖帶踢趟撥縮勾掛踩蹁，摧腿截腿尤為其特長矣。敗勢屬土，千變萬化，以快為其母，敗中取勝，是其良技也。</p>
-<p class="mp_main">八方又名謂群步，即大八方、中八方、小八方是也。為交手時應用之步也。可進可退，可攻可守，動似鵠鷹攫兔，靜之則如處女守身，絕手亂拳皆包於其中，講上、中、下三盤。</p>
-<p class="mp_main">上盤之用法：刁拿鎖帶，崩挑劈截，中盤則歙懈柔化，貼身靠打，下盤則鉤掛踩蹁、踢鏜撥縮、前後掃腿皆包於其中，可搏敵如在迷陣也。</p>
-<p class="mp_main">梅花樁覽野史閱者可以見之，此為本門獨有之特長，他拳之所無，可交手於樁上，遇敵可操必勝之券。而成拳為學者必由之路，初步有一定之手，如拳架焉，擰拳則無定手矣，亦可謂見勁使勁、引進落空，一力降於十會，一巧破千斤，整學亂用，見空按豆無空手矣。但練習者須經三易寒暑，方可力順氣遍周身，動中求靜，靜中求動，此身化之謂也。待氣隨意發，力隨氣使，則氣化之功又達矣。再練而致神化，神色可以傷人，此達深奧境也。苟吾人盡心學之，雖不能達其巔，亦可以健身自衛矣。簡之，意深筆略，至三節九段內外三合等等，會者皆聞及，學拳之方法規矩海內皆知，筆者均略之。</p>
+<h1 class="mp_title" u00024commentu0005bu00027idu00027u0005d="" id="calibre_toc_3">梅拳概论</h1>
+<p class="mp_main">夫我国拳术派别之众百有余门矣，但溯其源泉则一也。盖学拳者侧重于身体之一部，而展其所长，另创一家，于是门派生焉。迄今尤能保持原有状态者，仅梅拳耳。梅拳之始因年代之久远而不可知，传石汉时已有之，至今已有百廿余世矣。其内容基本则五势四门架子八方成拳拧拳梅花桩等。五势为大顺拗小败五势是也。势如梅树之花叶也，而架子如树之根干河之源泉，惟其变化又为其特长矣，兹分志之。</p>
+<p class="mp_comment">︻以下为架子中行步与桩步的主要练法︼</p>
+<p class="mp_main">架子四门此拳路也，均为四平大架子，包含四门五势八方等，亦是学者必由之路，通俗所谓盘架子是也。四门为练步之法，内含挤箭躐跳跃等，步熟之后，可任意横走竖撞，拗步斜身，亦可曰走如风，站如钉，仰之则高，俯之则深，进之则长、退之则促，随东就西、声左则右，知己知彼则百战百胜，使敌者如坠入五里雾中而不能辨其方向矣。</p>
+<p class="mp_main">五势之变化则本阴阳之理，太极之功，动之则分，静之则合；无过不及，随曲就伸，蓄劲如开弓，发劲似射箭。知宽知窄，随高就低，一气贯穿，刚柔相济，步随身换，气随意发。静之如山岳，按之有阴阳，无穷如天地，充实如太仓，一动似江河，行之似波浪，浩渺如江海，圆耀如三光。</p>
+<p class="mp_comment">︻在架子中行步可练步法之轻灵、动作之迅疾。而桩步则练全身之气血、养精气神之合一。此段，文字寓意极深，应熟记之。︼</p>
+<p class="mp_main">大势属金，须涵胸拔背，气敛丹田，静以观动，借劲使劲，或曰顺人之力借人之势也。顺势属水，其变化歌曰：顺势展开一条线，四路来人能改变，手眼身法步等。拗势属木，静势则斜身拗步，动作横走竖撞，迎风掌、斜身截步等又为此势中之得意手也。小势属火，站开其稳如钉，其变化尤多矣，刁拿锁带踢趟拨缩勾挂踩蹁，摧腿截腿尤为其特长矣。败势属土，千变万化，以快为其母，败中取胜，是其良技也。</p>
+<p class="mp_main">八方又名谓群步，即大八方、中八方、小八方是也。为交手时应用之步也。可进可退，可攻可守，动似鹄鹰攫兔，静之则如处女守身，绝手乱拳皆包于其中，讲上、中、下三盘。</p>
+<p class="mp_main">上盘之用法：刁拿锁带，崩挑劈截，中盘则歙懈柔化，贴身靠打，下盘则钩挂踩蹁、踢镗拨缩、前后扫腿皆包于其中，可搏敌如在迷阵也。</p>
+<p class="mp_main">梅花桩览野史阅者可以见之，此为本门独有之特长，他拳之所无，可交手于桩上，遇敌可操必胜之券。而成拳为学者必由之路，初步有一定之手，如拳架焉，拧拳则无定手矣，亦可谓见劲使劲、引进落空，一力降于十会，一巧破千斤，整学乱用，见空按豆无空手矣。但练习者须经三易寒暑，方可力顺气遍周身，动中求静，静中求动，此身化之谓也。待气随意发，力随气使，则气化之功又达矣。再练而致神化，神色可以伤人，此达深奥境也。苟吾人尽心学之，虽不能达其巅，亦可以健身自卫矣。简之，意深笔略，至三节九段内外三合等等，会者皆闻及，学拳之方法规矩海内皆知，笔者均略之。</p>
 <p class="mp_separator"></p>
-<p class="mp_comment">︻評注：︽梅拳概論︾一文已將練法、用法及本門拳法構造之特點等融為一體，讀後可基本了解梅拳之概貌。由此文我們可以看出，梅花樁以技擊為主要內容的用法，是寓於練法之中的。架子，是該派武功的基本練法，它有四門、五勢，樁步與行步之分，有動有靜，變化多端，絕手亂拳皆包含於其中。八方為練步的基礎，四門、八方又把拳法和陣法的訓練統一起來。︼</p>
+<p class="mp_comment">︻评注：︽梅拳概论︾一文已将练法、用法及本门拳法构造之特点等融为一体，读后可基本了解梅拳之概貌。由此文我们可以看出，梅花桩以技击为主要内容的用法，是寓于练法之中的。架子，是该派武功的基本练法，它有四门、五势，桩步与行步之分，有动有静，变化多端，绝手乱拳皆包含于其中。八方为练步的基础，四门、八方又把拳法和阵法的训练统一起来。︼</p>
 <p id="calibre_pb_2" class="mp_end"></p>
 </body>
 </html>
