--- a/epub_source/OEBPS/Text/index_split_003.html
+++ b/epub_source/OEBPS/Text/index_split_003.html
@@ -10,11 +10,11 @@
  
 </head>
   <body class="mp_body">
-<h1 class="mp_title" u00024commentu0005bu00027idu00027u0005d="" id="calibre_toc_4">渾元論</h1>
-<p class="mp_comment">︻此論是指導練法、用法最主要的理論，是練形、練氣、練神的主要方法，渾元是指練功達到的境界︼</p>
-<p class="mp_main">渾元一氣吾道成，道成莫外吾真形，真形內藏真精神，真精內藏氣擎停。欲將形形求真形，須將真形合形形，真形合來有真訣，合到真形徹底靈。<span class="mp_comment_inline">︻形形者一勢一法也，形氣合一也。真形即精氣神合一之象。︼</span></p>
+<h1 class="mp_title" u00024commentu0005bu00027idu00027u0005d="" id="calibre_toc_4">浑元论</h1>
+<p class="mp_comment">︻此论是指导练法、用法最主要的理论，是练形、练气、练神的主要方法，浑元是指练功达到的境界︼</p>
+<p class="mp_main">浑元一气吾道成，道成莫外吾真形，真形内藏真精神，真精内藏气擎停。欲将形形求真形，须将真形合形形，真形合来有真诀，合到真形彻底灵。<span class="mp_comment_inline">︻形形者一势一法也，形气合一也。真形即精气神合一之象。︼</span></p>
 <p class="mp_separator"></p>
-<p class="mp_comment">︻評注：渾元一氣是武功的最高境界，所謂﹁ 道成﹂ 即練成文武大道，練成之後即得﹁ 真形﹂ 。﹁ 真形﹂ 內有﹁ 真精神﹂ ，而﹁ 真精神﹂ 的核心是﹁ 氣擎停﹂ ，這是一種武功達高層次時內氣的自然聚散和運行。只有在武功達神化階段後，所表現出的內外合一、精氣神一體的現象才是武功的﹁ 真形﹂ 。武功鍛煉的目的也就是追求﹁ 真形﹂ 。本文把武術運動中的一勢一法都稱為﹁ 形形﹂ ，而﹁ 形形﹂ 者武術運動之表象也，通過一勢一法的拳勢和動作，去追求武功的﹁ 真形﹂ 要靠﹁ 真訣﹂ 。﹁ 真訣﹂ 者即治心之理論也，當得到﹁ 真形﹂ 之後才能﹁ 徹底靈﹂ 。﹁ 徹底靈﹂ 即武術運動中之無拘無束、無阻無礙、自然流暢之表象，是武功已達神化階段，自身已獲得徹底解放之形態。佛家認為人的肉身不過是四大︵ 地、水、火、風︶因緣假合之物，人的心是﹁ 天塵緣影﹂ 之心，皆屬虛幻，此處相當於本文所說的﹁ 形形﹂ ，﹁ 形形﹂ 也是虛幻暫存之物。佛家認為惟有﹁ 真如自性﹂ ，﹁ 圓覺妙心﹂ 才是本體﹁ 實相﹂ 。本文中的﹁ 真形﹂ 亦是武功的﹁ 本來面目﹂ ，它才是真實的存在。佛家修禪是以念止念、以心治心的，而武功鍛煉是在﹁ 真訣﹂ 指導下的以武治心，真乃殊途同歸也。︼</p>
+<p class="mp_comment">︻评注：浑元一气是武功的最高境界，所谓﹁ 道成﹂ 即练成文武大道，练成之后即得﹁ 真形﹂ 。﹁ 真形﹂ 内有﹁ 真精神﹂ ，而﹁ 真精神﹂ 的核心是﹁ 气擎停﹂ ，这是一种武功达高层次时内气的自然聚散和运行。只有在武功达神化阶段后，所表现出的内外合一、精气神一体的现象才是武功的﹁ 真形﹂ 。武功锻炼的目的也就是追求﹁ 真形﹂ 。本文把武术运动中的一势一法都称为﹁ 形形﹂ ，而﹁ 形形﹂ 者武术运动之表象也，通过一势一法的拳势和动作，去追求武功的﹁ 真形﹂ 要靠﹁ 真诀﹂ 。﹁ 真诀﹂ 者即治心之理论也，当得到﹁ 真形﹂ 之后才能﹁ 彻底灵﹂ 。﹁ 彻底灵﹂ 即武术运动中之无拘无束、无阻无碍、自然流畅之表象，是武功已达神化阶段，自身已获得彻底解放之形态。佛家认为人的肉身不过是四大︵ 地、水、火、风︶因缘假合之物，人的心是﹁ 天尘缘影﹂ 之心，皆属虚幻，此处相当于本文所说的﹁ 形形﹂ ，﹁ 形形﹂ 也是虚幻暂存之物。佛家认为惟有﹁ 真如自性﹂ ，﹁ 圆觉妙心﹂ 才是本体﹁ 实相﹂ 。本文中的﹁ 真形﹂ 亦是武功的﹁ 本来面目﹂ ，它才是真实的存在。佛家修禅是以念止念、以心治心的，而武功锻炼是在﹁ 真诀﹂ 指导下的以武治心，真乃殊途同归也。︼</p>
 <p id="calibre_pb_3" class="mp_end"></p>
 </body>
 </html>
