--- a/epub_source/OEBPS/Text/index_split_004.html
+++ b/epub_source/OEBPS/Text/index_split_004.html
@@ -10,12 +10,12 @@
  
 </head>
   <body class="mp_body">
-<h1 class="mp_title" u00024commentu0005bu00027idu00027u0005d="" id="calibre_toc_5">聚氣論</h1>
-<p class="mp_comment">︻本論講練功過程中聚氣的方法，練功包括架子、成拳、器械等練法。︼</p>
-<p class="mp_main">勢崢嶸氣泓濃，團團聚聚在中宮，隱而不發節節靈。忽然，神以役氣，氣以役形，霹靂交心火動，上下左右遍體行。</p>
+<h1 class="mp_title" u00024commentu0005bu00027idu00027u0005d="" id="calibre_toc_5">聚气论</h1>
+<p class="mp_comment">︻本论讲练功过程中聚气的方法，练功包括架子、成拳、器械等练法。︼</p>
+<p class="mp_main">势峥嵘气泓浓，团团聚聚在中宫，隐而不发节节灵。忽然，神以役气，气以役形，霹雳交心火动，上下左右遍体行。</p>
 <p class="mp_separator"></p>
-<p class="mp_comment">︻評注：文中之﹁ 勢崢嶸，氣泓濃﹂ 是指練功或技擊時出現的內外合一、精氣神一體的形態，即已達渾元一氣的真形，這是練功者所追求的目標。﹁ 團團聚聚在中宮，隱而不發節節靈﹂ 兩句話是互為因果的，對於武功已達神化階段的練功者，已養成內丹，中氣飽滿，他無論行動坐臥，練功或技擊時，內氣都能﹁ 團團聚聚在中宮﹂ ．已成自然之態。在練功或技擊時無論是出手上步，一勢一動都無欲無求、也無任何意念的活動，動作輕靈流暢。當然也就﹁ 隱而不發節節靈﹂ 了；另一方面，練功之人要無思無為，抑制一切意念活動，這就是﹁ 隱而不發﹂ 之意，同時在運動中要模仿兒童或動物在無意識活動時那種無拘無束、無阻無礙、滑快流暢、輕松自然的形態，努力作到﹁ 節節靈﹂ 。︽易經·系辭︾說：﹁ 天下何思何慮。﹂ 因為宇宙沒有任何思慮，所以日往月來，寒暑相推，恒久而流暢地運動著。上述練功的要求，就是通過以武治心使心性寂然，才能百脈流通，內氣自然匯聚丹田而﹁ 團團聚聚在中宮﹂ 。此即梅花樁武功自然聚氣之理，它與用﹁ 意守﹂ 或﹁ 意念導引﹂ 等方法的聚氣完全不同。</p>
-<p class="mp_comment">本文的﹁ 忽然﹂ 二字至關重要，它是形容靈感激發的一刹那。在這短促的瞬間，靈感是攸忽而至的，不是人的意志所能幹預的。神，即靈感，是武功的原動力。﹁ 神以役氣，氣以役形﹂ ，就是形容運動的機制。一動之後，﹁ 上下左右遍體行﹂ ，氣血周身流暢，作周天運行。一動則全身俱動，內外合一，精氣神一體，這和以意志為原動力的運動方式完全不同。意念指揮下的運動多是局部的，很難達到全身的協調統一、內外一致。特別是在技擊的瞬間，只要有一點意念的滲入，就要破壞運動的諧和、圓融和整體性。︼</p>
+<p class="mp_comment">︻评注：文中之﹁ 势峥嵘，气泓浓﹂ 是指练功或技击时出现的内外合一、精气神一体的形态，即已达浑元一气的真形，这是练功者所追求的目标。﹁ 团团聚聚在中宫，隐而不发节节灵﹂ 两句话是互为因果的，对于武功已达神化阶段的练功者，已养成内丹，中气饱满，他无论行动坐卧，练功或技击时，内气都能﹁ 团团聚聚在中宫﹂ ．已成自然之态。在练功或技击时无论是出手上步，一势一动都无欲无求、也无任何意念的活动，动作轻灵流畅。当然也就﹁ 隐而不发节节灵﹂ 了；另一方面，练功之人要无思无为，抑制一切意念活动，这就是﹁ 隐而不发﹂ 之意，同时在运动中要模仿儿童或动物在无意识活动时那种无拘无束、无阻无碍、滑快流畅、轻松自然的形态，努力作到﹁ 节节灵﹂ 。︽易经·系辞︾说：﹁ 天下何思何虑。﹂ 因为宇宙没有任何思虑，所以日往月来，寒暑相推，恒久而流畅地运动著。上述练功的要求，就是通过以武治心使心性寂然，才能百脉流通，内气自然汇聚丹田而﹁ 团团聚聚在中宫﹂ 。此即梅花桩武功自然聚气之理，它与用﹁ 意守﹂ 或﹁ 意念导引﹂ 等方法的聚气完全不同。</p>
+<p class="mp_comment">本文的﹁ 忽然﹂ 二字至关重要，它是形容灵感激发的一刹那。在这短促的瞬间，灵感是攸忽而至的，不是人的意志所能干预的。神，即灵感，是武功的原动力。﹁ 神以役气，气以役形﹂ ，就是形容运动的机制。一动之后，﹁ 上下左右遍体行﹂ ，气血周身流畅，作周天运行。一动则全身俱动，内外合一，精气神一体，这和以意志为原动力的运动方式完全不同。意念指挥下的运动多是局部的，很难达到全身的协调统一、内外一致。特别是在技击的瞬间，只要有一点意念的渗入，就要破坏运动的谐和、圆融和整体性。︼</p>
 <p id="calibre_pb_4" class="mp_end"></p>
 </body>
 </html>
