--- a/epub_source/OEBPS/Text/index_split_009.html
+++ b/epub_source/OEBPS/Text/index_split_009.html
@@ -10,8 +10,8 @@
  
 </head>
   <body class="mp_body">
-<h1 class="mp_title" u00024commentu0005bu00027idu00027u0005d="" id="calibre_toc_17">論手</h1>
-<p class="mp_main">吳氏澄曰；手有五指指有三節，大指一節隱於大指之內像太極也，共十五節，兩手合數共三十節，以像一月三十日。日冬短夏長春秋平，故中指屬心主夏獨長火也；小指屬腎主冬獨短水也；食指屬肝主春；無名指屬肺主秋；肝木肺金；二指等齊春秋早也。大指屬脾主土，旺於四季，兼手四德獨擋一面，故四指缺其三尚能持物，無大指則無用矣。其相合之妙，不假不借不強制自有天然之巧。其指法惟斫手氣入小指外側，蕩手氣入後掌，此二手五指並排一片，指尖翻翹，餘手俱宜。五指圈措羅列周圍，指節勾握如弓，氣方擎聚不散。如豎手回勾手，大指與小指相對領氣水必合土，天一生水，得地之五而成六也。平陰手平陽手，大指與中指相對領氣，火必合土，地二生火，得天之五而成七也。仰邀手大指與食指相對領氣木必合土，天三生水，得地之五成八也。陰棚手大指與無名指相對領氣，金必合土，地四生金，得天之五而成九也。是金木水火無一可離土也。知此則指之相合有一定不易之理，分毫有錯，氣即不入矣。至於用法則有九則：直出直回一也，仰上攉挑二也，俯下沉栽三也，外勾分攏四也，內勾抱摟五也，斜攉右上六也，斜劈左下七也，斜領左上八也，斜摔右下九也，四正四隅兼以直出中路，又合乎九宮也。</p>
+<h1 class="mp_title" u00024commentu0005bu00027idu00027u0005d="" id="calibre_toc_17">论手</h1>
+<p class="mp_main">吴氏澄曰；手有五指指有三节，大指一节隐于大指之内像太极也，共十五节，两手合数共三十节，以像一月三十日。日冬短夏长春秋平，故中指属心主夏独长火也；小指属肾主冬独短水也；食指属肝主春；无名指属肺主秋；肝木肺金；二指等齐春秋早也。大指属脾主土，旺于四季，兼手四德独挡一面，故四指缺其三尚能持物，无大指则无用矣。其相合之妙，不假不借不强制自有天然之巧。其指法惟斫手气入小指外侧，荡手气入后掌，此二手五指并排一片，指尖翻翘，余手俱宜。五指圈措罗列周围，指节勾握如弓，气方擎聚不散。如竖手回勾手，大指与小指相对领气水必合土，天一生水，得地之五而成六也。平阴手平阳手，大指与中指相对领气，火必合土，地二生火，得天之五而成七也。仰邀手大指与食指相对领气木必合土，天三生水，得地之五成八也。阴棚手大指与无名指相对领气，金必合土，地四生金，得天之五而成九也。是金木水火无一可离土也。知此则指之相合有一定不易之理，分毫有错，气即不入矣。至于用法则有九则：直出直回一也，仰上攉挑二也，俯下沉栽三也，外勾分拢四也，内勾抱搂五也，斜攉右上六也，斜劈左下七也，斜领左上八也，斜摔右下九也，四正四隅兼以直出中路，又合乎九宫也。</p>
 <p id="calibre_pb_9" class="mp_end"></p>
 </body>
 </html>
