--- a/epub_source/OEBPS/Text/index_split_010.html
+++ b/epub_source/OEBPS/Text/index_split_010.html
@@ -10,8 +10,8 @@
  
 </head>
   <body class="mp_body">
-<h1 class="mp_title" u00024commentu0005bu00027idu00027u0005d="" id="calibre_toc_18">論拳</h1>
-<p class="mp_main">拳者屈卷而不伸，握固其指團聚其氣也。其攥法以大指尖掐對食指第二節橫紋，四指卷緊握固，一齊著力，務使分之不開、擊之不散方為合竅。此乃土貫四德五行團聚之法也。其用法也有四正四隅合之中宮九法，其氣亦滿撲，落點有一定之處，隨勢體驗，不可混施。如平陰拳下栽者，中指二節領氣，平陽拳上沖者，中指根節領氣，側拳上挑者，大指二節領氣，側拳下劈者小指根節領氣，不拘側平，直撞擊者，小指根節二節中間平面領氣。明乎此，餘可類推矣。</p>
+<h1 class="mp_title" u00024commentu0005bu00027idu00027u0005d="" id="calibre_toc_18">论拳</h1>
+<p class="mp_main">拳者屈卷而不伸，握固其指团聚其气也。其攥法以大指尖掐对食指第二节横纹，四指卷紧握固，一齐著力，务使分之不开、击之不散方为合窍。此乃土贯四德五行团聚之法也。其用法也有四正四隅合之中宫九法，其气亦满扑，落点有一定之处，随势体验，不可混施。如平阴拳下栽者，中指二节领气，平阳拳上冲者，中指根节领气，侧拳上挑者，大指二节领气，侧拳下劈者小指根节领气，不拘侧平，直撞击者，小指根节二节中间平面领气。明乎此，余可类推矣。</p>
 <p id="calibre_pb_10" class="mp_end"></p>
 </body>
 </html>
