--- a/epub_source/OEBPS/Text/index_split_012.html
+++ b/epub_source/OEBPS/Text/index_split_012.html
@@ -11,9 +11,9 @@
 </head>
   <body class="mp_body">
 <h1 class="mp_title" u00024commentu0005bu00027idu00027u0005d="" id="calibre_toc_20">面部五行</h1>
-<p class="mp_main">怒動肝兮聲動心，鼻縱氣促發肺金，唇吻開撮振脾氣，眉皺睛突腎家尋。五行之氣內合五臟，肝合木，心合火，脾合土，肺合金，腎合水。外通五竅，目為肝竅，耳為腎竅，口為脾竅，鼻為肺竅，舌為心竅，其精華注於目。其五色分應五嶽，額屬南嶽色赤，地角北嶽色黑，左額東嶽色青，右額西嶽色白，鼻准中嶽色黃。又眉側生屬肝木，鼻通清氣屬肺金，眼聚精神屬腎水，舌司聲音發自丹田屬心火，唇司容納屬脾土。凡一動之間，勢不外屈伸，氣不外收放。面上五行，形象亦必隨之相合，方得氣實形堅之妙。故收束勢者，氣自肢節收入中宮，面上眉必皺，眼包收，鼻必縱，唇必撮，氣必吸，聲必噎，此內氣收而外像聚也。展拓勢者，氣自中宮發於肢節，面上眉必舒，眼必突，鼻必展，唇必開，氣必呼，聲必呵，此內氣放而外像開也。留心熟練，內氣合外之形，外形順內之氣，內外結成一團，堅硬如石，方用引法，初以掌拍之，次以拳打之，更以石袋木杵擊之，由輕而重漸引漸實，自不慮面上無氣矣。俗學不悟，謂故作神頭鬼臉以怪模樣驚人，豈通元達理之士哉。</p>
+<p class="mp_main">怒动肝兮声动心，鼻纵气促发肺金，唇吻开撮振脾气，眉皱睛突肾家寻。五行之气内合五脏，肝合木，心合火，脾合土，肺合金，肾合水。外通五窍，目为肝窍，耳为肾窍，口为脾窍，鼻为肺窍，舌为心窍，其精华注于目。其五色分应五岳，额属南岳色赤，地角北岳色黑，左额东岳色青，右额西岳色白，鼻准中岳色黄。又眉侧生属肝木，鼻通清气属肺金，眼聚精神属肾水，舌司声音发自丹田属心火，唇司容纳属脾土。凡一动之间，势不外屈伸，气不外收放。面上五行，形象亦必随之相合，方得气实形坚之妙。故收束势者，气自肢节收入中宫，面上眉必皱，眼包收，鼻必纵，唇必撮，气必吸，声必噎，此内气收而外像聚也。展拓势者，气自中宫发于肢节，面上眉必舒，眼必突，鼻必展，唇必开，气必呼，声必呵，此内气放而外像开也。留心熟练，内气合外之形，外形顺内之气，内外结成一团，坚硬如石，方用引法，初以掌拍之，次以拳打之，更以石袋木杵击之，由轻而重渐引渐实，自不虑面上无气矣。俗学不悟，谓故作神头鬼脸以怪模样惊人，岂通元达理之士哉。</p>
 <p class="mp_separator"></p>
-<p class="mp_comment">︻評注：本文說明了人的氣血、秉性、五臟之情況都可表現在面上，成面部五行。而人在練功之時，面部之神態氣色，亦必須與內氣之運行相合，應﹁ 內氣合外之形，外形，頃內之氣﹂ ，方能內外合一，方得氣實形堅之妙。練功時面部神態自然、安詳，自然氣血流暢，動轉靈便。︼</p>
+<p class="mp_comment">︻评注：本文说明了人的气血、秉性、五脏之情况都可表现在面上，成面部五行。而人在练功之时，面部之神态气色，亦必须与内气之运行相合，应﹁ 内气合外之形，外形，顷内之气﹂ ，方能内外合一，方得气实形坚之妙。练功时面部神态自然、安详，自然气血流畅，动转灵便。︼</p>
 <p id="calibre_pb_12" class="mp_end"></p>
 </body>
 </html>
