--- a/epub_source/OEBPS/Text/index_split_014.html
+++ b/epub_source/OEBPS/Text/index_split_014.html
@@ -10,10 +10,10 @@
  
 </head>
   <body class="mp_body">
-	<h1 class="mp_title" u00024commentu0005bu00027idu00027u0005d="" id="calibre_toc_22">陰陽轉結論</h1>
-<p class="mp_main">天地之道，不外陰陽，陰陽轉結，出自天然。故靜極而動，陽繼乎陰也，動極而靜，陰承乎陽也。推而至於四時，秋冬之後，繼以春夏，收藏極而發生隨之。春夏之後，接以秋冬，發生盡而收藏隨之。陰必轉陽，陽必轉陰，乃造化之生成，故能生生不窮無有止息。人秉陰陽之氣以生，乃一小天地，其勢之一陰一陽轉結承遞豈能不論哉。高為陽，低為陰，仰為陽，俯為陰，伸為陽，屈為陰；動為陽，靜為陰，正為陽，側為陰；勢高者必落之以低，陽轉乎陰也。若高而更高，無可高矣，勢必不連，氣必不接。勢低者，必起之以高，陰轉乎陽也。若低而更低，無可低也，勢必不連，氣必不續；俯仰屈伸，動靜側正無不皆然。間有陰複轉陰、陽複轉陽者，乃一氣之不盡複摧一氣以促之也，非陰盡複轉陰，陽盡複轉陽也。明乎此則轉關有一定之勢，接落有一定之氣，無悖謬無牽扯矣。蓋勢之滑快，氣之流利中無間斷也，一有間斷則必另起爐灶，是以求快而反遲，求利而反鈍也。</p>
+	<h1 class="mp_title" u00024commentu0005bu00027idu00027u0005d="" id="calibre_toc_22">阴阳转结论</h1>
+<p class="mp_main">天地之道，不外阴阳，阴阳转结，出自天然。故静极而动，阳继乎阴也，动极而静，阴承乎阳也。推而至于四时，秋冬之后，继以春夏，收藏极而发生随之。春夏之后，接以秋冬，发生尽而收藏随之。阴必转阳，阳必转阴，乃造化之生成，故能生生不穷无有止息。人秉阴阳之气以生，乃一小天地，其势之一阴一阳转结承递岂能不论哉。高为阳，低为阴，仰为阳，俯为阴，伸为阳，屈为阴；动为阳，静为阴，正为阳，侧为阴；势高者必落之以低，阳转乎阴也。若高而更高，无可高矣，势必不连，气必不接。势低者，必起之以高，阴转乎阳也。若低而更低，无可低也，势必不连，气必不续；俯仰屈伸，动静侧正无不皆然。间有阴复转阴、阳复转阳者，乃一气之不尽复摧一气以促之也，非阴尽复转阴，阳尽复转阳也。明乎此则转关有一定之势，接落有一定之气，无悖谬无牵扯矣。盖势之滑快，气之流利中无间断也，一有间断则必另起炉灶，是以求快而反迟，求利而反钝也。</p>
 <p class="mp_separator"></p>
-<p class="mp_comment">︻評注：世界上一切事物都在不斷地變化著，因此﹁ 變﹂ 就是一切客觀事物的本質，它是一種絕對的屬性。梅花樁武功是善於變化的，變化也是梅花樁技擊的最大特長。本文說﹁ 天地之道不外陰陽，陰陽轉結出自天然﹂ ，是大自然的變化規律。梅花樁武功也要遵從天地之道，陰變陽，陽轉陰，轉結承遞無有止息。練功的目的不是學什麼固定的套路，而主要是學會拳法變化之理，掌握拳法變化的規律，使練者無論在練功或技擊中都能轉送有一定之勢，接落有一定之氣，無悖謬無牽扯，滑快流利而無間斷，這就是梅花樁無思無為的自然之態。梅花樁武功的變化，也是使它能夠萬法歸宗的重要因素。︼</p>
+<p class="mp_comment">︻评注：世界上一切事物都在不断地变化著，因此﹁ 变﹂ 就是一切客观事物的本质，它是一种绝对的属性。梅花桩武功是善于变化的，变化也是梅花桩技击的最大特长。本文说﹁ 天地之道不外阴阳，阴阳转结出自天然﹂ ，是大自然的变化规律。梅花桩武功也要遵从天地之道，阴变阳，阳转阴，转结承递无有止息。练功的目的不是学什么固定的套路，而主要是学会拳法变化之理，掌握拳法变化的规律，使练者无论在练功或技击中都能转送有一定之势，接落有一定之气，无悖谬无牵扯，滑快流利而无间断，这就是梅花桩无思无为的自然之态。梅花桩武功的变化，也是使它能够万法归宗的重要因素。︼</p>
 <p id="calibre_pb_15" class="mp_end"></p>
 </body>
 </html>
