--- a/epub_source/OEBPS/Text/index_split_017.html
+++ b/epub_source/OEBPS/Text/index_split_017.html
@@ -10,12 +10,12 @@
  
 </head>
   <body class="mp_body">
-<h1 class="mp_title" u00024commentu0005bu00027idu00027u0005d="" id="calibre_toc_24">三節九段論</h1>
-<p class="mp_main">三節者，又天地人三才也。人有上中下三節，身體立正兩手上伸，則兩臂為上節，白頭至臀為中節，自胯至足為下節。兩手在上像天之日月星，身體居中像人有精氣神，兩足在下像地有水火風。上三節手腕為梢節，肘為中節，肩為根節。中三節，白頭至主心骨為中節之上節，自主心骨至臍為中節之中節，自臍至兩臀為中節之下節。下三節胯為根節，兩膝為中節，兩腳腕為下節。人體之構成有三百六十五節，像一片散沙不能團聚在一塊。身一動有腳去手不去之患，是故習藝之人不懂三節九段，則落點不整，出手不能發出幹百斤氣力，能知三節九段，六合如一，身體自然能成一塊，體重一斤，能打十斤，十斤能打百斤，有百斤之體自能打千斤之氣力也。</p>
+<h1 class="mp_title" u00024commentu0005bu00027idu00027u0005d="" id="calibre_toc_24">三节九段论</h1>
+<p class="mp_main">三节者，又天地人三才也。人有上中下三节，身体立正两手上伸，则两臂为上节，白头至臀为中节，自胯至足为下节。两手在上像天之日月星，身体居中像人有精气神，两足在下像地有水火风。上三节手腕为梢节，肘为中节，肩为根节。中三节，白头至主心骨为中节之上节，自主心骨至脐为中节之中节，自脐至两臀为中节之下节。下三节胯为根节，两膝为中节，两脚腕为下节。人体之构成有三百六十五节，像一片散沙不能团聚在一块。身一动有脚去手不去之患，是故习艺之人不懂三节九段，则落点不整，出手不能发出干百斤气力，能知三节九段，六合如一，身体自然能成一块，体重一斤，能打十斤，十斤能打百斤，有百斤之体自能打千斤之气力也。</p>
 <p class="mp_separator"></p>
-<p class="mp_comment">︻評注：梅花樁武功不論是鍛煉或是技擊，都要﹁ 腳手齊到才為真﹂ ，有口訣說：上下相隨人難進，五形四梢俱合全，氣連心意隨時用，大破硬進無遮攔。</p>
-<p class="mp_comment">也就是發勁要整的意思。若落點不整，為拳法之大忌，可將人體分為三節九段，365 處關節，若如一盤散沙不能團聚一起，身一動腳去手不去，相互牽扯，上下不隨，內外又不相合，怎能發出整勁?</p>
-<p class="mp_comment">凡練功時心一動則全身俱動，稍有一處不合，發手必不勇猛，落點也不堅剛。欲求疾快猛，必在落點之時發勁要整，能進能退，動如風吹不停，行如流星趕月，自然能達上乘矣。︼</p>
+<p class="mp_comment">︻评注：梅花桩武功不论是锻炼或是技击，都要﹁ 脚手齐到才为真﹂ ，有口诀说：上下相随人难进，五形四梢俱合全，气连心意随时用，大破硬进无遮拦。</p>
+<p class="mp_comment">也就是发劲要整的意思。若落点不整，为拳法之大忌，可将人体分为三节九段，365 处关节，若如一盘散沙不能团聚一起，身一动脚去手不去，相互牵扯，上下不随，内外又不相合，怎能发出整劲?</p>
+<p class="mp_comment">凡练功时心一动则全身俱动，稍有一处不合，发手必不勇猛，落点也不坚刚。欲求疾快猛，必在落点之时发劲要整，能进能退，动如风吹不停，行如流星赶月，自然能达上乘矣。︼</p>
 <p id="calibre_pb_17" class="mp_end"></p>
 </body>
 </html>
