--- a/epub_source/OEBPS/Text/index_split_028.html
+++ b/epub_source/OEBPS/Text/index_split_028.html
@@ -10,10 +10,10 @@
  
 </head>
   <body class="mp_body">
-<h1 class="mp_title" u00024commentu0005bu00027idu00027u0005d="" id="calibre_toc_35">得門而入論</h1>
-<p class="mp_main">語雲：法有外門，非外門乃門外也。蓋拳之摧人必近其身，方能跌出。如物之藏室，不得門而入，縱神仙拳無由升堂直入探而取之矣。拳之門在手，而手之門有三。手腕一也。此外大門也，肘心二也，此進一層二門也，膀根三也，此更進一層三門也。進此三門，已進內院，可以升堂入室矣。故交手又只在手腕者，則屈伸往來任意變幻無窮無盡，手捷者先得，手慢者吃虧，終不能摧人一點即倒。著意肘心者，雖進一層門，未即近身，尚有變幻，不能操必勝之權。惟一眼注定他之膊根，不論他先出手我先出手，只在此處留心，邀住他手，粘連不離，隨我變化，任意指揮，無不如意，他自不能逃我範圍。師雲：言不明，藝不精，先學理，後學藝，理不明，藝不通。</p>
+<h1 class="mp_title" u00024commentu0005bu00027idu00027u0005d="" id="calibre_toc_35">得门而入论</h1>
+<p class="mp_main">语云：法有外门，非外门乃门外也。盖拳之摧人必近其身，方能跌出。如物之藏室，不得门而入，纵神仙拳无由升堂直入探而取之矣。拳之门在手，而手之门有三。手腕一也。此外大门也，肘心二也，此进一层二门也，膀根三也，此更进一层三门也。进此三门，已进内院，可以升堂入室矣。故交手又只在手腕者，则屈伸往来任意变幻无穷无尽，手捷者先得，手慢者吃亏，终不能摧人一点即倒。著意肘心者，虽进一层门，未即近身，尚有变幻，不能操必胜之权。惟一眼注定他之膊根，不论他先出手我先出手，只在此处留心，邀住他手，粘连不离，随我变化，任意指挥，无不如意，他自不能逃我范围。师云：言不明，艺不精，先学理，后学艺，理不明，艺不通。</p>
 <p class="mp_separator"></p>
-<p class="mp_comment">︻評注：本文說明技擊中手為大門，肘為二門，膊根為三門。交手之時不要只在大門、二門外周旋，要得門而入，登堂入室。只有靠近敵身，才能使敵跌出。怎樣才能得門?要想得門就要知道門在哪裏。若問門在哪裏?就要知敵出拳用力的方向，﹁ 門﹂ 就在敵手運動方向的背後。梅花樁技擊交手之時，一般不要攔截架打，而是閃化為上，但閃化即打，使敵摸不清我手力量的方向和大小，見﹁ 門﹂ 即入，直摧敵身，這要比搗虛之法更勝一籌，其每出一手都使敵感到很大的威脅。︼</p>
+<p class="mp_comment">︻评注：本文说明技击中手为大门，肘为二门，膊根为三门。交手之时不要只在大门、二门外周旋，要得门而入，登堂入室。只有靠近敌身，才能使敌跌出。怎样才能得门?要想得门就要知道门在哪里。若问门在哪里?就要知敌出拳用力的方向，﹁ 门﹂ 就在敌手运动方向的背后。梅花桩技击交手之时，一般不要拦截架打，而是闪化为上，但闪化即打，使敌摸不清我手力量的方向和大小，见﹁ 门﹂ 即入，直摧敌身，这要比捣虚之法更胜一筹，其每出一手都使敌感到很大的威胁。︼</p>
 <p id="calibre_pb_28" class="mp_end"></p>
 </body>
 </html>
