--- a/epub_source/OEBPS/Text/index_split_029.html
+++ b/epub_source/OEBPS/Text/index_split_029.html
@@ -10,10 +10,10 @@
  
 </head>
   <body class="mp_body">
-<h1 class="mp_title" u00024commentu0005bu00027idu00027u0005d="" id="calibre_toc_36">頭手二手前手後手論</h1>
-<p class="mp_main">外門入手相交，多失著者，以其有十失，故不能取勝。未交手不知聚氣，空腔無物，氣發不疾猛一失也。不知兩手交擱胸前，以顧上下沖擊二失也。未交手先擺勢，空隙顯然三失也。閃勢而進不敢直入，舍近求遠，勞而不逸四失也。進必上步，橫身換勢，寬而不窄五失也。交手只在手腕，不知進身六失也。放過頭手，不敢打人七失也。二手救住還不打人八失也。三手四手方才沖打九失也。閃戰錯位，粘連不住十失也。有此十失安得不敗。未交手即聚氣凝神，氣擎不散，兩手交擱胸前，看他那腳在前，即粘近身注意他的膊根，制住他的膊，此即閃門之法，以待他之動靜，我先出手照住他的膊根，一伸手即是頭手，要得手不俟二手。若他先出手，我也照住他膊根，一伸手即不得手，亦必顧住他手另覓打法，不至手遲而又生變。蓋此法乃開寸離尺之巧，照住他膊根開一寸則手梢已離一尺矣。又有截氣搗虛之法，所謂出其不意，攻其無備，如迅雷不及掩耳者此也。或遇捷手，退晃打我，我不換手不屈膊摧二氣打之。或我擊打他左，他退左進右，我不回手，挪打他右膊根。或我擊他右，他退右進左，我不回手挪打他左膊根，蓋我在圈內他在圈外，他以勞我以逸，任他滑快無不奇中，此前手擊而前手打之秘訣，間亦有繼後手者，則用所當用非強施也，若不當用，動必橫身，每見用此而敗。而迎人沖打者未見有此失也。欲達上乘之功，必由成拳繼之擰拳之徑，朝夕摩練，遇敵方操必勝之權。</p>
+<h1 class="mp_title" u00024commentu0005bu00027idu00027u0005d="" id="calibre_toc_36">头手二手前手后手论</h1>
+<p class="mp_main">外门入手相交，多失著者，以其有十失，故不能取胜。未交手不知聚气，空腔无物，气发不疾猛一失也。不知两手交搁胸前，以顾上下冲击二失也。未交手先摆势，空隙显然三失也。闪势而进不敢直入，舍近求远，劳而不逸四失也。进必上步，横身换势，宽而不窄五失也。交手只在手腕，不知进身六失也。放过头手，不敢打人七失也。二手救住还不打人八失也。三手四手方才冲打九失也。闪战错位，粘连不住十失也。有此十失安得不败。未交手即聚气凝神，气擎不散，两手交搁胸前，看他那脚在前，即粘近身注意他的膊根，制住他的膊，此即闪门之法，以待他之动静，我先出手照住他的膊根，一伸手即是头手，要得手不俟二手。若他先出手，我也照住他膊根，一伸手即不得手，亦必顾住他手另觅打法，不至手迟而又生变。盖此法乃开寸离尺之巧，照住他膊根开一寸则手梢已离一尺矣。又有截气捣虚之法，所谓出其不意，攻其无备，如迅雷不及掩耳者此也。或遇捷手，退晃打我，我不换手不屈膊摧二气打之。或我击打他左，他退左进右，我不回手，挪打他右膊根。或我击他右，他退右进左，我不回手挪打他左膊根，盖我在圈内他在圈外，他以劳我以逸，任他滑快无不奇中，此前手击而前手打之秘诀，间亦有继后手者，则用所当用非强施也，若不当用，动必横身，每见用此而败。而迎人冲打者未见有此失也。欲达上乘之功，必由成拳继之拧拳之径，朝夕摩练，遇敌方操必胜之权。</p>
 <p class="mp_separator"></p>
-<p class="mp_comment">︻評注：本文討論了梅花樁技擊中的幾種常用打法。文章開始講述了交手十失，此十失皆交手之大忌，練功中必須注意。梅花樁交手不攔不架，應閃過敵手上步靠近敵身，且以一手制住敵之膊根，自有開寸進尺之巧，此時若他動我亦動，即可用迅雷不及掩耳的截氣搗虛之法。我出前手再以前手擊敵，此即以逸待勞的前手法；我若已出一手，我再換手打人，前手落點後手即發，其動只在瞬間不容毫發，此即後手法，多在迎人沖打時用此，未見有失著。︼</p>
+<p class="mp_comment">︻评注：本文讨论了梅花桩技击中的几种常用打法。文章开始讲述了交手十失，此十失皆交手之大忌，练功中必须注意。梅花桩交手不拦不架，应闪过敌手上步靠近敌身，且以一手制住敌之膊根，自有开寸进尺之巧，此时若他动我亦动，即可用迅雷不及掩耳的截气捣虚之法。我出前手再以前手击敌，此即以逸待劳的前手法；我若已出一手，我再换手打人，前手落点后手即发，其动只在瞬间不容毫发，此即后手法，多在迎人冲打时用此，未见有失著。︼</p>
 <p id="calibre_pb_29" class="mp_end"></p>
 </body>
 </html>
