--- a/epub_source/OEBPS/Text/index_split_032.html
+++ b/epub_source/OEBPS/Text/index_split_032.html
@@ -10,14 +10,14 @@
  
 </head>
   <body class="mp_body">
-<h1 class="mp_title" u00024commentu0005bu00027idu00027u0005d="" id="calibre_toc_39">八方論</h1>
-<p class="mp_main">何為八方?八方為散手之母，又名群步，有大八方、中八方、小八方之別。看敵從何來，以何方應之。小八方落三點，中八方落五點，大八方為亂點。步隨身換，腳隨手出，非學不悟此為交手之活步，為梅花拳之特長。所謂上步須要先上身，腳手齊到才為真。陰出陽入，陽出陰入，總攬四面，支撐八方。所謂八方是也。</p>
-<p class="mp_main">五勢梅花拳之練法，分樁步與行步。樁步以五勢為本，行步以三法為宗。五勢者：大勢、順勢、拗勢、小勢、敗勢。三法者：擺法、撤法、紮法。五勢者，金木水火土五行也。大勢屬金，金能生水，所以能變順勢；順勢屬水，水能生木，所以能變拗勢；拗勢屬木，木能生火，所以能變小勢；小勢屬火，火能生土，所以能變敗勢；敗勢屬土，土能生金，所以又能變大勢矣。五行相生者順，相克者逆。擺法為行步之首，忽左忽右，忽進忽退，行東就西，忽上就下，妙在活步。撤法為抽撤之迅。紮法求進攻之疾。初步學習務必求真為要。</p>
+<h1 class="mp_title" u00024commentu0005bu00027idu00027u0005d="" id="calibre_toc_39">八方论</h1>
+<p class="mp_main">何为八方?八方为散手之母，又名群步，有大八方、中八方、小八方之别。看敌从何来，以何方应之。小八方落三点，中八方落五点，大八方为乱点。步随身换，脚随手出，非学不悟此为交手之活步，为梅花拳之特长。所谓上步须要先上身，脚手齐到才为真。阴出阳入，阳出阴入，总揽四面，支撑八方。所谓八方是也。</p>
+<p class="mp_main">五势梅花拳之练法，分桩步与行步。桩步以五势为本，行步以三法为宗。五势者：大势、顺势、拗势、小势、败势。三法者：摆法、撤法、扎法。五势者，金木水火土五行也。大势属金，金能生水，所以能变顺势；顺势属水，水能生木，所以能变拗势；拗势属木，木能生火，所以能变小势；小势属火，火能生土，所以能变败势；败势属土，土能生金，所以又能变大势矣。五行相生者顺，相克者逆。摆法为行步之首，忽左忽右，忽进忽退，行东就西，忽上就下，妙在活步。撤法为抽撤之迅。扎法求进攻之疾。初步学习务必求真为要。</p>
 <p class="mp_separator"></p>
-<p class="mp_comment">︻評注：八方之要點是步隨身換，腳隨手出，即上步須要先上身，腳手齊到才為真，這是全身協調成一整勁的關鍵。小八方、中八方尚有一定之步點，它們主要用以練功，至大八方已無拘無束，隨意變化，因而常用以技擊。</p>
-<p class="mp_comment">梅花樁之樁步五勢，為諸拳勢的5 個基本要素，它們的特長是可以變化，其變化之規律要與五行的相生相克之理相合。</p>
-<p class="mp_comment">行步三法為諸般行步之基礎，其中擺法最為難練，為行步之首，忽東忽西，忽進忽退，活步之妙，常出乎敵人意料，使敵處處受阻，走投無路；撤法在於抽撤之快，紮法為長驅直入，它們都可進可退，可長可短，迂回包抄。埋伏截擊皆在其中。</p>
-<p class="mp_comment">梅花樁步法之用最為靈活，其練法亦無窮盡。︼</p>
+<p class="mp_comment">︻评注：八方之要点是步随身换，脚随手出，即上步须要先上身，脚手齐到才为真，这是全身协调成一整劲的关键。小八方、中八方尚有一定之步点，它们主要用以练功，至大八方已无拘无束，随意变化，因而常用以技击。</p>
+<p class="mp_comment">梅花桩之桩步五势，为诸拳势的5 个基本要素，它们的特长是可以变化，其变化之规律要与五行的相生相克之理相合。</p>
+<p class="mp_comment">行步三法为诸般行步之基础，其中摆法最为难练，为行步之首，忽东忽西，忽进忽退，活步之妙，常出乎敌人意料，使敌处处受阻，走投无路；撤法在于抽撤之快，扎法为长驱直入，它们都可进可退，可长可短，迂回包抄。埋伏截击皆在其中。</p>
+<p class="mp_comment">梅花桩步法之用最为灵活，其练法亦无穷尽。︼</p>
 <p id="calibre_pb_32" class="mp_end"></p>
 </body>
 </html>
