--- a/epub_source/OEBPS/Text/index_split_035.html
+++ b/epub_source/OEBPS/Text/index_split_035.html
@@ -10,41 +10,41 @@
  
 </head>
   <body class="mp_body">
-<h1 class="mp_title" u00024commentu0005bu00027idu00027u0005d="" id="calibre_toc_42">五勢變化</h1>
+<h1 class="mp_title" u00024commentu0005bu00027idu00027u0005d="" id="calibre_toc_42">五势变化</h1>
 	
     
-    <h2 id="calibre_toc_53" class="mp_subtitle">大勢變化</h2>
-<p class="mp_poetry_line">氣練丹由站當中，留神細看來人形。</p>
-<p class="mp_poetry_line">南來順他向北往，東來順他向西行。</p>
-<p class="mp_poetry_line">見勁使勁借他勁，不可爭力逆進行。</p>
+    <h2 id="calibre_toc_53" class="mp_subtitle">大势变化</h2>
+<p class="mp_poetry_line">气练丹由站当中，留神细看来人形。</p>
+<p class="mp_poetry_line">南来顺他向北往，东来顺他向西行。</p>
+<p class="mp_poetry_line">见劲使劲借他劲，不可争力逆进行。</p>
 
 
-	<h2 id="calibre_toc_43" class="mp_subtitle">順勢變化</h2>
-<p class="mp_poetry_line">單鞭伸開一條線，四路來人能改變。</p>
-<p class="mp_poetry_line">一變昆錘掛裹手，二變豁山錘當先，</p>
-<p class="mp_poetry_line">三變手眼身法步，四變掃腿帶地盤。</p>
+	<h2 id="calibre_toc_43" class="mp_subtitle">顺势变化</h2>
+<p class="mp_poetry_line">单鞭伸开一条线，四路来人能改变。</p>
+<p class="mp_poetry_line">一变昆锤挂裹手，二变豁山锤当先，</p>
+<p class="mp_poetry_line">三变手眼身法步，四变扫腿带地盘。</p>
 
 
-	<h2 id="calibre_toc_44" class="mp_subtitle">拗勢變化</h2>
-<p class="mp_poetry_line">拗勢伸開似龍形，合肩扣步走西東。</p>
-<p class="mp_poetry_line">橫走豎撞迎風掌，斜身拗步令人驚。</p>
-<p class="mp_poetry_line">左翻右轉橫擺腿，栽錘快錘不留情。</p>
+	<h2 id="calibre_toc_44" class="mp_subtitle">拗势变化</h2>
+<p class="mp_poetry_line">拗势伸开似龙形，合肩扣步走西东。</p>
+<p class="mp_poetry_line">横走竖撞迎风掌，斜身拗步令人惊。</p>
+<p class="mp_poetry_line">左翻右转横摆腿，栽锤快锤不留情。</p>
 
 
-	<h2 id="calibre_toc_45" class="mp_subtitle">小勢變化</h2>
-<p class="mp_poetry_line">小勢站穩賽如釘，踢點截撞似猴形。</p>
-<p class="mp_poetry_line">刁拿鎖帶靠身肘，勾掛踩蹁步法精。</p>
-<p class="mp_poetry_line">摧腿劈腿迎風腿，上下變轉快如風。</p>
+	<h2 id="calibre_toc_45" class="mp_subtitle">小势变化</h2>
+<p class="mp_poetry_line">小势站稳赛如钉，踢点截撞似猴形。</p>
+<p class="mp_poetry_line">刁拿锁带靠身肘，勾挂踩蹁步法精。</p>
+<p class="mp_poetry_line">摧腿劈腿迎风腿，上下变转快如风。</p>
 
 
-	<h2 id="calibre_toc_46" class="mp_subtitle">敗勢變化</h2>
-<p class="mp_poetry_line">敗勢伸開回頭看，左劈右扣隨時變。</p>
-<p class="mp_poetry_line">前後左右撐撥腿，前豁後跳上下翻。</p>
-<p class="mp_poetry_line">腳打七分手打三，千變萬化快為先。</p>
+	<h2 id="calibre_toc_46" class="mp_subtitle">败势变化</h2>
+<p class="mp_poetry_line">败势伸开回头看，左劈右扣随时变。</p>
+<p class="mp_poetry_line">前后左右撑拨腿，前豁后跳上下翻。</p>
+<p class="mp_poetry_line">脚打七分手打三，千变万化快为先。</p>
 <p class="mp_separator"></p>
-<p class="mp_comment">︻評注：從本文可以看出，五勢之變化只要符合陰陽轉結之理，就無拘無束，無窮無盡。在技擊中，大勢可看作是一腳實、一腳半虛半實的預備姿勢，這時主要是察敵人之來勢，審敵人之短長，因敵人之動而動，見手使手，借勁使勁。梅花樁技擊只有出手引手，見手使手，沒有自己先出手擊敵的。彼不動己不動、彼微動己先動是梅花樁技擊的原則。後發先至，後發制人是梅花樁技擊的特點。順勢是順身順步，兩腳俱實的擊敵之勢，它的變化很靈活，能四面出手上步，不單只攻一路。拗勢之特點是拗步斜身，能橫走豎撞，出手迅速而又威力強大，各種腿法也使用方便，任意變化，故有梅花樁得意手之稱。小勢為一腳虛一腳實之擊敵姿勢，多在小踢小打、小捉小拿時用之，它變化迅速，出腿方便，如猿猴一樣靈活。敗勢為梅花樁特有之拳勢，世間只有梅花拳敢於言敗，且專設一勢稱為敗勢，其意深遠。觀敗勢之形態有抽撤、閃化之象。梅花樁的技擊原則認為﹁ 抽撤即攻，閃化即打﹂ 。而事實也確如此。梅花樁之練功於平凡中見偉大，在其技擊中又能敗中取勝，出敵意料。要注意此敗中取勝絕不是詐敗佯輸的誘敵之法，因此並沒有任何主觀意念挑選，交手之時並沒有設什麼圈套，考慮什麼計謀，而是真敗，但此敗卻成了啟動靈感的信息，故轉敗為勝是因勢利導、順理成章、自然而然之結局，這也正是梅花樁武功的精深博奧的特點之一。梅花樁武功可使敵慘敗於他最得意的一刹那間，這就是敗勢之能為。</p>
-<p class="mp_comment">五勢之變化雖為練法，但卻包藏了技擊的精華，這也就是﹁ 絕手亂拳皆包藏於其中﹂ 的道理。若把學習梅花樁五勢之基本變化稱為﹁ 立﹂ ，那麼本文所介紹的五勢之變化就是﹁ 破﹂ ，也就是說本文所說的五勢變化的口訣，是使梅花樁架子打破基本套路的框框，而上升到無形無態的高級階段的方法和規律。</p>
-<p class="mp_comment">五勢的變化是梅花樁架子變化的基礎，當然此外還有行步的變化，正是由於架子可以千變萬化，也能提高練功者的悟性，所以它才可以萬法歸宗、隱於無形。︼</p>
+<p class="mp_comment">︻评注：从本文可以看出，五势之变化只要符合阴阳转结之理，就无拘无束，无穷无尽。在技击中，大势可看作是一脚实、一脚半虚半实的预备姿势，这时主要是察敌人之来势，审敌人之短长，因敌人之动而动，见手使手，借劲使劲。梅花桩技击只有出手引手，见手使手，没有自己先出手击敌的。彼不动己不动、彼微动己先动是梅花桩技击的原则。后发先至，后发制人是梅花桩技击的特点。顺势是顺身顺步，两脚俱实的击敌之势，它的变化很灵活，能四面出手上步，不单只攻一路。拗势之特点是拗步斜身，能横走竖撞，出手迅速而又威力强大，各种腿法也使用方便，任意变化，故有梅花桩得意手之称。小势为一脚虚一脚实之击敌姿势，多在小踢小打、小捉小拿时用之，它变化迅速，出腿方便，如猿猴一样灵活。败势为梅花桩特有之拳势，世间只有梅花拳敢于言败，且专设一势称为败势，其意深远。观败势之形态有抽撤、闪化之象。梅花桩的技击原则认为﹁ 抽撤即攻，闪化即打﹂ 。而事实也确如此。梅花桩之练功于平凡中见伟大，在其技击中又能败中取胜，出敌意料。要注意此败中取胜绝不是诈败佯输的诱敌之法，因此并没有任何主观意念挑选，交手之时并没有设什么圈套，考虑什么计谋，而是真败，但此败却成了启动灵感的信息，故转败为胜是因势利导、顺理成章、自然而然之结局，这也正是梅花桩武功的精深博奥的特点之一。梅花桩武功可使敌惨败于他最得意的一刹那间，这就是败势之能为。</p>
+<p class="mp_comment">五势之变化虽为练法，但却包藏了技击的精华，这也就是﹁ 绝手乱拳皆包藏于其中﹂ 的道理。若把学习梅花桩五势之基本变化称为﹁ 立﹂ ，那么本文所介绍的五势之变化就是﹁ 破﹂ ，也就是说本文所说的五势变化的口诀，是使梅花桩架子打破基本套路的框框，而上升到无形无态的高级阶段的方法和规律。</p>
+<p class="mp_comment">五势的变化是梅花桩架子变化的基础，当然此外还有行步的变化，正是由于架子可以千变万化，也能提高练功者的悟性，所以它才可以万法归宗、隐于无形。︼</p>
 <p id="calibre_pb_35" class="mp_end"></p>
 </body>
 </html>
