--- a/epub_source/OEBPS/Text/index_split_040.html
+++ b/epub_source/OEBPS/Text/index_split_040.html
@@ -10,10 +10,10 @@
  
 </head>
   <body class="mp_body">
-	<h1 class="mp_title" u00024commentu0005bu00027idu00027u0005d="" id="calibre_toc_51">一貫之道</h1>
-<p class="mp_main">易有太極，是生兩儀，兩儀生四象，四象生八卦，八卦生六十四爻，生生無窮。夫一者，太極也。貫者，生生不窮之儀也。易曰：生生之謂易，陰陽不測之謂神。夫乾，其靜也專，其動也直，是以大生焉。夫坤，其靜也翕，其動也辟，是以廣生焉。天地設位，而易行乎其中矣。成性存存，道義之門，引而伸之，觸類而長之，天下之能事畢矣。子曰：知變化之道者，其知神之所為乎。世子欲學文武之道者，一而已矣，詎可泛視也哉！</p>
-<p class="mp_main">問：至聖之心如明鏡止水者，何謂也？答曰：即周子通書曰：寂然不動者，誠也；感而遂通者，神也；動而未形，有無之間者幾也。誠精故明，神感故妙，幾微故幽。誠神、幾、曰聖人。一謂為太極者，何謂也？答曰：道為太極，心為太極，萬物之理具於一心，隨感而應，皆合其宜，如四時行百物生，故曰聖心一太極。</p>
-<p class="mp_main">太極拍位圖︵ 略︶</p>
+	<h1 class="mp_title" u00024commentu0005bu00027idu00027u0005d="" id="calibre_toc_51">一贯之道</h1>
+<p class="mp_main">易有太极，是生两仪，两仪生四象，四象生八卦，八卦生六十四爻，生生无穷。夫一者，太极也。贯者，生生不穷之仪也。易曰：生生之谓易，阴阳不测之谓神。夫干，其静也专，其动也直，是以大生焉。夫坤，其静也翕，其动也辟，是以广生焉。天地设位，而易行乎其中矣。成性存存，道义之门，引而伸之，触类而长之，天下之能事毕矣。子曰：知变化之道者，其知神之所为乎。世子欲学文武之道者，一而已矣，讵可泛视也哉！</p>
+<p class="mp_main">问：至圣之心如明镜止水者，何谓也？答曰：即周子通书曰：寂然不动者，诚也；感而遂通者，神也；动而未形，有无之间者几也。诚精故明，神感故妙，几微故幽。诚神、几、曰圣人。一谓为太极者，何谓也？答曰：道为太极，心为太极，万物之理具于一心，随感而应，皆合其宜，如四时行百物生，故曰圣心一太极。</p>
+<p class="mp_main">太极拍位图︵ 略︶</p>
 <p id="calibre_pb_40" class="mp_end"></p>
 </body>
 </html>
