--- a/epub_source/OEBPS/Text/index_split_041.html
+++ b/epub_source/OEBPS/Text/index_split_041.html
@@ -10,18 +10,18 @@
  
 </head>
   <body class="mp_body">
-<p class="mp_main">詠太極詩：</p>
-<p class="mp_main">要落空渾是有有，非滯物寂如無無；</p>
-<p class="mp_main">不知太極森然處，三複濂溪太極圖。</p>
-<p class="mp_main">古肥郡邑癢生劉漢裔敬敘：</p>
-<p class="mp_main">嘗聞拳師鳴九王氏本鶴之言曰：古銅臺大名府內黃縣有伊契友虎文楊氏，諱炳，武烈出眾，中壬辰科探花。予信其韜略比黃呂，法術效孫吳，勇過伍明甫，運籌帷幄之中，決勝千裏之外。今觀其佳作，所載武略規模，禮佛儀注，故予會文武童子，不特武略骎骎師尚父，更有文章祖先尼，故敢破膽獻醜沐手俚言贊於後。</p>
-<p class="mp_main">贊 曰：</p>
-<p class="mp_main">佳作出自楊虎文，武藝文章兩絕倫；</p>
-<p class="mp_main">探花及第非僥幸，果是忠君報國臣。</p>
-<p class="mp_main">識見高明達時務，龍潭虎穴難久存；</p>
-<p class="mp_main">致仕養親歸故裏，滿腹經綸誰認真。</p>
-<p class="mp_main">金鯉已化黃池隱，安貧樂道耕有莘。</p>
-<p class="mp_main">老生勤施趨庭教，公子科會定超尋。</p>
+<p class="mp_main">咏太极诗：</p>
+<p class="mp_main">要落空浑是有有，非滞物寂如无无；</p>
+<p class="mp_main">不知太极森然处，三复濂溪太极图。</p>
+<p class="mp_main">古肥郡邑痒生刘汉裔敬叙：</p>
+<p class="mp_main">尝闻拳师鸣九王氏本鹤之言曰：古铜台大名府内黄县有伊契友虎文杨氏，讳炳，武烈出众，中壬辰科探花。予信其韬略比黄吕，法术效孙吴，勇过伍明甫，运筹帷幄之中，决胜千里之外。今观其佳作，所载武略规模，礼佛仪注，故予会文武童子，不特武略骎骎师尚父，更有文章祖先尼，故敢破胆献丑沐手俚言赞于后。</p>
+<p class="mp_main">赞 曰：</p>
+<p class="mp_main">佳作出自杨虎文，武艺文章两绝伦；</p>
+<p class="mp_main">探花及第非侥幸，果是忠君报国臣。</p>
+<p class="mp_main">识见高明达时务，龙潭虎穴难久存；</p>
+<p class="mp_main">致仕养亲归故里，满腹经纶谁认真。</p>
+<p class="mp_main">金鲤已化黄池隐，安贫乐道耕有莘。</p>
+<p class="mp_main">老生勤施趋庭教，公子科会定超寻。</p>
 <p class="mp_separator"></p>
 <p class="mp_end" id="calibre_pb_41"></p>
 </body>
